--- a/01. PARTIE LEGISLATIVE/Article L5314-4 - 23080674.md
+++ b/01. PARTIE LEGISLATIVE/Article L5314-4 - 23080674.md
@@ -1,20 +1,29 @@
 # Article L5314-4
 
-Les communes ou, le cas échéant, les communautés de communes, les communautés urbaines ou les communautés d'agglomération,
-sont compétentes pour créer, aménager et exploiter les ports maritimes dont l'activité principale est la plaisance.
+Les communes ou, le cas échéant, les communautés de communes, les communautés urbaines, les métropoles  ou les communautés
+d'agglomération, sont compétentes pour créer, aménager et exploiter les ports maritimes dont l'activité principale est la
+plaisance.
 
 Elles sont également compétentes pour aménager et exploiter les ports maritimes de commerce et de pêche qui leur sont
 transférés.
 
 Toutefois, les compétences exercées par d'autres collectivités territoriales ou groupements de collectivités territoriales
 sur les ports maritimes dont l'activité principale est la plaisance ne peuvent être transférées aux communes ou, le cas
-échéant, aux communautés de communes, aux communautés urbaines ou aux communautés d'agglomération, sans l'accord exprès de
-ces autres collectivités territoriales ou groupements de collectivités territoriales.
+échéant, aux communautés de communes, aux communautés urbaines, aux métropoles  ou aux communautés d'agglomération, sans
+l'accord exprès de ces autres collectivités territoriales ou groupements de collectivités territoriales.
 
 Le département ou un syndicat mixte peut également, à la demande d'une commune ou, le cas échéant, d'une communauté de
 communes, créer, aménager et exploiter un port maritime dont l'activité principale est la plaisance.
 
 **Liens relatifs à cet article**
+
+	**Modifié par**:
+
+	  - Loi n°2010-1563 du 16 décembre 2010 - art. 17
+
+	**Anciens textes**:
+
+	  - Code des ports maritimes - art. L601-1 (Ab), alinéas 3 à 5, paragraphe III
 
 	**Cité par**:
 
