--- a/01. PARTIE LEGISLATIVE/Article L6521-2 - 23077712.md
+++ b/01. PARTIE LEGISLATIVE/Article L6521-2 - 23077712.md
@@ -1,19 +1,29 @@
 # Article L6521-2
 
-Nul ne peut faire partie du personnel navigant professionnel de l'aéronautique civile s'il n'est :
+Nul ne peut faire partie du personnel navigant professionnel de l'aéronautique civile s'il n'est : 
 
-1° Titulaire d'un titre aéronautique en état de validité ;
+1° Titulaire d'un titre aéronautique en état de validité ; 
 
 2° Inscrit sur le registre correspondant à celle des fonctions mentionnées à l'article L. 6521-1 dont il relève et à l'une
-des trois catégories suivantes :
+des trois catégories suivantes : 
 
-a) Essais et réceptions ;
+a) Essais et réceptions ; 
 
-b) Transport aérien ;
+b) Transport aérien ; 
 
-c) Travail aérien.
+c) Travail aérien. 
+
+Le personnel navigant prestataire de services de transport ou de travail aériens établi dans un Etat membre de l'Union
+européenne autre que la France ou dans un Etat partie à l'accord sur l'Espace économique européen ou aux accords bilatéraux
+passés par l'Union européenne avec la Confédération suisse ainsi que le personnel navigant salarié d'un prestataire de
+services de transport ou de travail aériens établi dans l'un des Etats précités, qui exercent temporairement leur activité en
+France, n'entrent pas dans le champ d'application du présent article.
 
 **Liens relatifs à cet article**
+
+	**Modifié par**:
+
+	  - Loi n°2011-12 du 5 janvier 2011 - art. 13
 
 	**Cité par**:
 
@@ -22,6 +32,16 @@ c) Travail aérien.
 	  - Code des transports - art. L6521-4 (V)
 	  - Code des transports - art. L6521-5 (V)
 	  - Code des transports - art. L6527-1 (V)
+
+	**Anciens textes**:
+
+	  - Code de l'aviation civile - art. L421-2 (Ab)
+	  - Code de l'aviation civile - art. L421-3 (Ab)
+	  - Code de l'aviation civile - art. L421-4 (Ab), possession de titres pour être PN professionnel
+
+	**Cite**:
+
+	  - Code des transports - art. L6521-1 (V)
 
 	**Codifié par**:
 
