--- a/01. PARTIE LEGISLATIVE/Article L6527-1 - 23077600.md
+++ b/01. PARTIE LEGISLATIVE/Article L6527-1 - 23077600.md
@@ -1,10 +1,10 @@
 # Article L6527-1
 
-Le personnel navigant professionnel civil salarié inscrit sur les registres prévus par l'article L. 6521-3, qui exerce de
+Le personnel navigant professionnel civil salarié, nonobstant les dispositions du 2° de l'article L. 6521-2, qui exerce de
 manière habituelle la profession de navigant à titre d'occupation principale, bénéficie d'un régime complémentaire de
-retraite auquel il est obligatoirement affilié.
+retraite auquel il est obligatoirement affilié. 
 
-Les navigants stagiaires de l'aéronautique civile sont assujettis à ce régime de retraite.
+Les navigants stagiaires de l'aéronautique civile sont assujettis à ce régime de retraite. 
 
 Les personnels navigants répondant aux conditions du premier alinéa et employés hors de France par une entreprise étrangère
 peuvent également être affiliés sur la demande de ladite entreprise ou, à défaut, sur leur demande dans des conditions fixées
@@ -21,9 +21,13 @@ par voie réglementaire.
 	  - Code des transports - art. L6527-4 (V)
 	  - Code des transports - art. L6527-9 (V)
 
-	**Anciens textes**:
+	**Modifié par**:
 
-	  - Code de l'aviation civile - art. L426-1 (Ab), alinéas 1 et 2, bénéfice de la retraite complémentaire
+	  - Loi n°2011-12 du 5 janvier 2011 - art. 13
+
+	**Cite**:
+
+	  - Code des transports - art. L6521-2
 
 	**Codifié par**:
 
