--- a/01. PARTIE LEGISLATIVE/Article L3113-1 - 23083955.md
+++ b/01. PARTIE LEGISLATIVE/Article L3113-1 - 23083955.md
@@ -1,15 +1,15 @@
 # Article L3113-1
 
 Les entreprises de transport public de personnes établies sur le territoire national doivent être inscrites à un registre
-tenu par les autorités de l'Etat dans les conditions prévues par l'article L. 1421-1.L'inscription à ce registre peut être
-subordonnée à des conditions d'honorabilité professionnelle, de capacité financière et de capacité professionnelle selon des
-modalités fixées par décret en Conseil d'Etat.
+tenu par les autorités de l'Etat dans les conditions prévues par l'article L. 1421-1. L'inscription à ce registre peut être
+subordonnée à des conditions d'établissement, d'honorabilité professionnelle, de capacité financière et de capacité
+professionnelle selon des modalités fixées par décret en Conseil d'Etat.
 
 **Liens relatifs à cet article**
 
-	**Anciens textes**:
+	**Modifié par**:
 
-	  - Loi n°82-1153 du 30 décembre 1982 - art. 7 (Ab), alinéa 1, paragraphe I
+	  - Loi n°2011-12 du 5 janvier 2011 - art. 10
 
 	**Cité par**:
 
@@ -29,7 +29,7 @@ modalités fixées par décret en Conseil d'Etat.
 
 	**Cite**:
 
-	  - Code des transports - art. L1421-1 (V)
+	  - Code des transports - art. L1421-1
 
 	**Codifié par**:
 
