--- a/01. PARTIE LEGISLATIVE/Article L3211-1 - 23083826.md
+++ b/01. PARTIE LEGISLATIVE/Article L3211-1 - 23083826.md
@@ -1,15 +1,15 @@
 # Article L3211-1
 
 L'exercice des professions de transporteur public routier de marchandises, y compris de déménagement, ou de loueur de
-véhicules industriels avec conducteur peut être subordonné, selon des modalités fixées par décret en Conseil d'Etat, à des
-conditions d'honorabilité professionnelle, de capacité financière et de capacité professionnelle ainsi qu'à l'inscription à
-un registre tenu par les autorités de l'Etat.
+véhicules industriels avec conducteur peut être subordonné, selon des modalités fixées par décret en Conseil d'Etat,  à des
+conditions d'établissement, d'honorabilité professionnelle, de capacité financière et de capacité professionnelle ainsi qu'à
+l'inscription à un registre tenu par les autorités de l'Etat.
 
 **Liens relatifs à cet article**
 
-	**Anciens textes**:
+	**Modifié par**:
 
-	  - Loi n°82-1153 du 30 décembre 1982 - art. 8 (Ab), alinéa 1, paragraphe I
+	  - Loi n°2011-12 du 5 janvier 2011 - art. 10
 
 	**Cité par**:
 
