--- a/01. PARTIE LEGISLATIVE/Article L6332-3 - 23078102.md
+++ b/01. PARTIE LEGISLATIVE/Article L6332-3 - 23078102.md
@@ -2,17 +2,29 @@
 
 Les exploitants d'aérodromes civils et les gestionnaires des zones civiles des aérodromes ouverts au trafic aérien commercial
 dont le ministère de la défense est affectataire principal sont tenus d'assurer, sous l'autorité du titulaire des pouvoirs de
-police mentionné à l'article L. 6332-2, le sauvetage et la lutte contre les incendies d'aéronefs, ainsi que la prévention du
-péril aviaire. Ils peuvent, en tout ou partie, confier l'exécution de ces missions, par voie de convention, au service
-départemental d'incendie et de secours, à l'autorité militaire ou à un organisme agréé dans des conditions fixées par voie
-réglementaire.
+police mentionné à l'article L. 6332-2, le sauvetage et la lutte contre les incendies d'aéronefs ainsi que la prévention du
+péril animalier. Ils peuvent, en tout ou partie, confier par voie de convention à l'autorité militaire, au service
+départemental d'incendie et de secours ou à tout autre organisme l'exécution de ces missions. Les modalités d'exercice des
+missions mentionnées au présent article ainsi que les contrôles auxquels sont soumis ces organismes sont précisés par décret.
 
 **Liens relatifs à cet article**
+
+	**Modifié par**:
+
+	  - Loi n°2011-12 du 5 janvier 2011 - art. 14
 
 	**Cité par**:
 
 	  - Loi n°2012-1270 du 20 novembre 2012 - art. 35 (V)
 	  - Code des transports - art. L6321-4 (V)
+
+	**Anciens textes**:
+
+	  - Code de l'aviation civile - art. L213-3 (Ab), alinéa 1
+
+	**Cite**:
+
+	  - Code des transports - art. L6332-2
 
 	**Codifié par**:
 
