--- a/01. PARTIE LEGISLATIVE/Article L1452-1 - 23085335.md
+++ b/01. PARTIE LEGISLATIVE/Article L1452-1 - 23085335.md
@@ -4,16 +4,20 @@ Les sanctions administratives, notamment la radiation du registre, ne peuvent ê
 commissionnaires de transport qu'après avis d'une commission des sanctions administratives placée auprès de l'autorité
 compétente dont la composition et les modalités de fonctionnement sont fixées par un décret en Conseil d'Etat.
 
+Une commission nationale des sanctions administratives placée auprès du ministre chargé des transports est saisie pour avis
+des recours hiérarchiques formés contre les sanctions administratives prononcées par l'autorité compétente après avis de la
+commission mentionnée à l'alinéa précédent.
+
 **Liens relatifs à cet article**
-
-	**Anciens textes**:
-
-	  - Loi n°82-1153 du 30 décembre 1982 - art. 17 (M), alinéa 9
-
-	**Cité par**:
-
-	  - Code des transports - art. R3452-1 (VD)
 
 	**Codifié par**:
 
 	  - Ordonnance n°2010-1307 du 28 octobre 2010 - art. (V)
+
+	**Modifié par**:
+
+	  - Ordonnance n°2010-1307 du 28 octobre 2010 - art. 10
+
+	**Cité par**:
+
+	  - Code des transports - art. R3452-1 (VD)
