--- a/01. PARTIE LEGISLATIVE/Article L5243-5 - 23080910.md
+++ b/01. PARTIE LEGISLATIVE/Article L5243-5 - 23080910.md
@@ -4,18 +4,15 @@ Sous réserve de contrôles inopinés, le procureur de la République est préal
 de la recherche des infractions par les fonctionnaires et agents de l'Etat mentionnés aux articles L. 5243-1 à L. 5243-4. Il
 peut s'opposer à ces opérations. 
 
-En cas d'infraction, il est immédiatement informé des constatations auxquelles elles ont donné lieu. 
+En cas d'infraction aux dispositions des articles L. 5241-11 à L. 5241-15 et L. 5242-9 à L. 5242-12, il est immédiatement
+informé des constatations auxquelles elles ont donné lieu. 
 
 Les procès-verbaux lui sont transmis dans les cinq jours par l'agent verbalisateur qui en adresse, dans les mêmes délais,
-copie à l'intéressé et au directeur départemental des affaires maritimes dont relève le lieu de l'infraction. 
+copie à l'intéressé et au directeur départemental des territoires et de la mer  dont relève le lieu de l'infraction. 
 
 Ces procès-verbaux font foi jusqu'à preuve du contraire.
 
 **Liens relatifs à cet article**
-
-	**Anciens textes**:
-
-	  - Loi n°83-581 du 5 juillet 1983 - art. 5 (Ab), alinéa 2
 
 	**Cité par**:
 
@@ -23,8 +20,12 @@ Ces procès-verbaux font foi jusqu'à preuve du contraire.
 
 	**Cite**:
 
-	  - Code des transports - art. L5243-1 (V)
+	  - Code des transports - art. L5243-1
 
 	**Codifié par**:
 
 	  - Ordonnance n°2010-1307 du 28 octobre 2010 - art. (V)
+
+	**Modifié par**:
+
+	  - Ordonnance n°2011-204 du 24 février 2011 - art. 5
