--- a/01. PARTIE LEGISLATIVE/Article L5243-6 - 23080908.md
+++ b/01. PARTIE LEGISLATIVE/Article L5243-6 - 23080908.md
@@ -1,17 +1,26 @@
 # Article L5243-6
 
-Les infractions aux dispositions du chapitre Ier et à celles des sous-sections 1 et 2 de la section 1 du chapitre II du
-présent titre sont jugées soit par le tribunal compétent du lieu de l'infraction, soit par le tribunal compétent dans le
-ressort duquel le navire est immatriculé.
+Les infractions aux dispositions                      visées aux articles L. 5241-11 à L. 5241-15 et L. 5242-9 à L. 5242-12
+sont jugées soit par le tribunal compétent du lieu de l'infraction, soit par le tribunal compétent dans le ressort duquel le
+navire est immatriculé.
 
 A défaut d'autre tribunal, le tribunal de grande instance de Paris est compétent.
 
+**Nota:**
+
+Conformément à l'article 21 de l'ordonnance n° 2012-1218 du 2 novembre 2012, les dispositions de l'article L. 5243-6 seront
+abrogées selon des modalités fixées par décret, et au plus tard à compter du 1er janvier 2015.
+
 **Liens relatifs à cet article**
-
-	**Anciens textes**:
-
-	  - Loi n°83-581 du 5 juillet 1983 - art. 5 (Ab), alinéa 3
 
 	**Codifié par**:
 
 	  - Ordonnance n°2010-1307 du 28 octobre 2010 - art. (V)
+
+	**Modifié par**:
+
+	  - Ordonnance n°2011-204 du 24 février 2011 - art. 5
+
+	**Abrogé par**:
+
+	  - Ordonnance n°2012-1218 du 2 novembre 2012 - art. 18 (V)
