--- a/01. PARTIE LEGISLATIVE/Article L5273-1 - 23080805.md
+++ b/01. PARTIE LEGISLATIVE/Article L5273-1 - 23080805.md
@@ -4,7 +4,8 @@ Est puni d'un an d'emprisonnement et de 15 000 € d'amende le fait de délivrer
 bateaux de plaisance à moteur en mer et en eaux intérieures sans avoir obtenu l'agrément prévu par l'article L. 5272-1 ou en
 violation d'une mesure de suspension provisoire de celui-ci. 
 
-Est puni des mêmes peines le fait d'employer un formateur non titulaire d'une autorisation d'enseigner en cours de validité. 
+Est puni des mêmes peines le fait d'employer un formateur non titulaire d'une autorisation d'enseigner en cours de validité
+ou n'ayant pas rempli l'obligation de déclaration préalable à une première prestation sur le territoire national. 
 
 Les personnes physiques coupables de l'une des infractions définies aux alinéas précédents encourent également les peines
 complémentaires suivantes : 
@@ -35,15 +36,15 @@ produit.
 	  - Loi du 17 décembre 1926 - art. 37 (V)
 	  - Code des transports - art. L5273-2 (V)
 
-	**Anciens textes**:
+	**Modifié par**:
 
-	  - Loi n°2006-10 du 5 janvier 2006 - art. 17 (Ab), alinéas 24 à 29, paragraphe III
+	  - Ordonnance n°2011-204 du 24 février 2011 - art. 5
 
 	**Cite**:
 
 	  - Code pénal - art. 131-27
-	  - Code pénal - art. 131-35 (V)
-	  - Code des transports - art. L5272-1 (V)
+	  - Code pénal - art. 131-35
+	  - Code des transports - art. L5272-1
 
 	**Codifié par**:
 
