--- a/01. PARTIE LEGISLATIVE/Article L5552-21 - 23079217.md
+++ b/01. PARTIE LEGISLATIVE/Article L5552-21 - 23079217.md
@@ -1,13 +1,18 @@
 # Article L5552-21
 
 Lorsqu'une pension est concédée, qu'elle soit liquidée ou non, toute reprise d'activité entrainant affiliation au régime
-d'assurance vieillesse des marins ne peut ouvrir de nouveaux droits à pension ou donner lieu à révision de la pension.
+d'assurance vieillesse des marins ne peut ouvrir de nouveaux droits à pension ou donner lieu à révision de la pension sauf
+dans les cas mentionnés aux articles L. 5552-7 et L. 5552-10.
 
 **Liens relatifs à cet article**
 
-	**Anciens textes**:
+	**Modifié par**:
 
-	  - Code des pensions de retraite des marins frança... - art. L16 (Ab), alinéa 2
+	  - Ordonnance n°2011-204 du 24 février 2011 - art. 5
+
+	**Cite**:
+
+	  - Code des transports - art. L5552-7
 
 	**Codifié par**:
 
