--- a/01. PARTIE LEGISLATIVE/Article L5724-2 - 23643843.md
+++ b/01. PARTIE LEGISLATIVE/Article L5724-2 - 23643843.md
@@ -1,4 +1,4 @@
-# Article L5722-1
+# Article L5724-2
 
 Les articles L. 5431-2 et L. 5431-3 sont applicables aux transports maritimes réguliers publics de personnes pour la desserte
 de ports ou appontements du littoral. 
@@ -9,15 +9,14 @@ partie, les autorités mentionnées aux premier et troisième alinéas du même 
 
 **Liens relatifs à cet article**
 
-	**Liens**:
+	**Créé par**:
 
-	  - TRANSFERE: Ordonnance n°2011-204 du 24 février 2011 - art. 5
+	  - Ordonnance n°2011-204 du 24 février 2011 - art. 5
 
-	**Cite**:
+	**Anciens textes**:
 
-	  - Code des transports - art. L5431-1
-	  - Code des transports - art. L5431-2
+	  - Code des transports - art. L5722-1 (T)
 
-	**Nouveaux textes**:
+	**Codifié par**:
 
-	  - Code des transports - art. L5724-2 (M)
+	  - Ordonnance n°2010-1307 du 28 octobre 2010 - art. (V)
