--- a/01. PARTIE LEGISLATIVE/Article L6111-3 - 23078478.md
+++ b/01. PARTIE LEGISLATIVE/Article L6111-3 - 23078478.md
@@ -14,19 +14,22 @@ sur l'Espace économique européen ;
 française.
 
 Les conditions d'application du présent article et les conditions dans lesquelles l'autorité administrative peut, par
-dérogation, immatriculer des aéronefs exploités en France mais ne remplissant pas ces conditions sont fixées par arrêté
-ministériel.
+dérogation, immatriculer des aéronefs ne remplissant pas ces conditions, mais exploités en France ou en attente de
+certification dans le pays de leur exploitant, sont fixées par arrêté ministériel.
+
+Les aéronefs immatriculés en France à titre dérogatoire avant le 1er décembre 2010 conservent le bénéfice de cette
+dérogation.
 
 **Liens relatifs à cet article**
+
+	**Modifié par**:
+
+	  - Ordonnance n°2011-204 du 24 février 2011 - art. 6
 
 	**Cité par**:
 
 	  - Arrêté du 31 octobre 2011 - art. 1 (V)
 	  - Code des transports - art. L6111-4 (V)
-
-	**Anciens textes**:
-
-	  - Code de l'aviation civile - art. L121-3 (Ab)
 
 	**Codifié par**:
 
