--- a/01. PARTIE LEGISLATIVE/Article L6523-2 - 23077681.md
+++ b/01. PARTIE LEGISLATIVE/Article L6523-2 - 23077681.md
@@ -10,7 +10,7 @@ Le contrat de travail précise :
 
 4° Le cas échéant, les conditions d'accomplissement de la mission pour laquelle il a été conclu ; 
 
-5° Le cas échéant, les conditions de détachement du navigant sur un poste à l'étranger ; 
+5° Le cas échéant, les conditions d'affectation du navigant sur un poste à l'étranger ; 
 
 6° Le délai de préavis à observer en cas de résiliation du contrat par l'une ou l'autre des parties ; 
 
@@ -21,13 +21,13 @@ L. 6521-4 et L. 6521-5 ;
 
 **Liens relatifs à cet article**
 
-	**Anciens textes**:
+	**Modifié par**:
 
-	  - Code de l'aviation civile - art. L423-1 (VT), alinéas 2 et 3, ecqc les mentions du contrat et le salaire minimum
+	  - Ordonnance n°2011-204 du 24 février 2011 - art. 6
 
 	**Cite**:
 
-	  - Code des transports - art. L6521-4 (V)
+	  - Code des transports - art. L6521-4
 
 	**Cité par**:
 
