--- a/01. PARTIE LEGISLATIVE/Article L6523-5 - 23077675.md
+++ b/01. PARTIE LEGISLATIVE/Article L6523-5 - 23077675.md
@@ -1,17 +1,17 @@
 # Article L6523-5
 
-Le contrat conclu pour une durée déterminée indique le lieu de destination finale de la mission.
+Si le contrat est conclu pour une mission déterminée, il indique le lieu de destination finale de cette dernière et le moment
+à partir duquel elle est réputée accomplie. 
 
 Le contrat de travail à durée déterminée dont le terme survient au cours d'une mission est prorogé jusqu'à l'achèvement de la
 mission.
 
 **Liens relatifs à cet article**
 
-	**Anciens textes**:
-
-	  - Code de l'aviation civile - art. L423-1 (VT), alinéa 6, contrat à durée déterminée
-	  - Code de l'aviation civile - art. L423-2 (Ab), alinéa 1, contrat de travail à durée indéterminée
-
 	**Codifié par**:
 
 	  - Ordonnance n°2010-1307 du 28 octobre 2010 - art. (V)
+
+	**Modifié par**:
+
+	  - Ordonnance n°2011-204 du 24 février 2011 - art. 6
