--- a/01. PARTIE LEGISLATIVE/Article L6523-6 - 23077673.md
+++ b/01. PARTIE LEGISLATIVE/Article L6523-6 - 23077673.md
@@ -1,7 +1,7 @@
 # Article L6523-6
 
-Le contrat de travail qui prévoit, à la demande de l'employeur, le détachement du navigant sur un poste à l'étranger,
-comporte les mentions suivantes :
+Le contrat de travail qui prévoit, à la demande de l'employeur, l'affectation du navigant sur un poste à l'étranger, comporte
+les mentions suivantes :
 
 1° La durée du séjour hors de France, qui ne peut excéder, sauf accord entre les deux parties, une durée fixée par voie
 réglementaire ;
@@ -15,10 +15,10 @@ préavis et aux frais de l'employeur.
 
 **Liens relatifs à cet article**
 
-	**Anciens textes**:
-
-	  - Code de l'aviation civile - art. L423-1 (VT), alinéas 7, 8, 9, 10 et 11, ecqc l'expatriement du navigant
-
 	**Codifié par**:
 
 	  - Ordonnance n°2010-1307 du 28 octobre 2010 - art. (V)
+
+	**Modifié par**:
+
+	  - Ordonnance n°2011-204 du 24 février 2011 - art. 6
