--- a/01. PARTIE LEGISLATIVE/Article L6524-4 - 23077641.md
+++ b/01. PARTIE LEGISLATIVE/Article L6524-4 - 23077641.md
@@ -1,19 +1,25 @@
 # Article L6524-4
 
 Dans les entreprises dans lesquelles un collège électoral spécifique est créé pour les personnels navigants techniques,
-lorsque la convention de branche ou l'accord d'entreprise ou d'établissement ne concerne que les personnels navigants
-techniques, sa validité est constatée dans les conditions définies à l'article L. 2232-12 du code du travail.
+lorsque la convention ou l'accord d'entreprise ou d'établissement ne concerne que les personnels navigants techniques, sa
+validité est constatée dans les conditions définies à l'article L. 2232-12 du code du travail, appréciée dans ce collège.
+
+**Nota:**
+
+Le 
+  _a)_ du 12° de l'article 6 de l'ordonnance n° 2011-204 du 24 février 2011, introduisant les mots : ", appréciée dans ce
+collège" entre en vigueur le 1er décembre 2010 conformément à l'article 8 de ladite ordonnance.
 
 **Liens relatifs à cet article**
-
-	**Cite**:
-
-	  - Code du travail - art. L2232-12
-
-	**Anciens textes**:
-
-	  - Code de l'aviation civile - art. L423-10 (Ab), alinéa 1, conditions de la validité de l'accord d'entreprise
 
 	**Codifié par**:
 
 	  - Ordonnance n°2010-1307 du 28 octobre 2010 - art. (V)
+
+	**Modifié par**:
+
+	  - Ordonnance n°2011-204 du 24 février 2011 - art. 6
+
+	**Cite**:
+
+	  - Code du travail - art. L2232-12
