--- a/01. PARTIE LEGISLATIVE/Article L6541-1 - 23648693.md
+++ b/01. PARTIE LEGISLATIVE/Article L6541-1 - 23648693.md
@@ -1,17 +1,13 @@
-# Article L6531-1
+# Article L6541-1
 
 Est puni d'un an d'emprisonnement et de 75 000 € d'amende le fait de conduire un aéronef sans être titulaire d'un brevet ou
 d'une licence.
 
 **Liens relatifs à cet article**
 
-	**Liens**:
+	**Créé par**:
 
-	  - TRANSFERE: Ordonnance n°2011-204 du 24 février 2011 - art. 6
-
-	**Anciens textes**:
-
-	  - Code de l'aviation civile - art. L150-2 (Ab), alinéa 1, conduite sans brevet ou sans licence
+	  - Ordonnance n°2011-204 du 24 février 2011 - art. 6
 
 	**Cité par**:
 
@@ -19,6 +15,6 @@ d'une licence.
 	  - Code des transports - art. L6765-1 (V)
 	  - Code des transports - art. L6775-1 (V)
 
-	**Nouveaux textes**:
+	**Anciens textes**:
 
-	  - Code des transports - art. L6541-1 (V)
+	  - Code des transports - art. L6531-1 (T)
