--- a/01. PARTIE LEGISLATIVE/Article L6541-3 - 23648705.md
+++ b/01. PARTIE LEGISLATIVE/Article L6541-3 - 23648705.md
@@ -1,23 +1,20 @@
-# Article L6531-3
+# Article L6541-3
 
 Est passible des peines de l'abus de confiance prévues par les articles 314-1 et 314-10 du code pénal le fait pour
 l'exploitant de retenir indûment la contribution ouvrière précomptée sur le salaire, en application de l'article L. 6527-10.
 
 **Liens relatifs à cet article**
 
-	**Liens**:
+	**Créé par**:
 
-	  - TRANSFERE: Ordonnance n°2011-204 du 24 février 2011 - art. 6
+	  - Ordonnance n°2011-204 du 24 février 2011 - art. 6
 
 	**Cite**:
 
-	  - Code pénal - art. 314-1
-	  - Code des transports - art. L6527-10
+	  - Code pénal - art. 314-1 (V)
+	  - Code pénal - art. 314-10 (V)
+	  - Code des transports - art. L6527-10 (V)
 
 	**Anciens textes**:
 
-	  - Code de l'aviation civile - art. L427-2 (Ab)
-
-	**Nouveaux textes**:
-
-	  - Code des transports - art. L6541-3 (V)
+	  - Code des transports - art. L6531-3 (T)
