--- a/01. PARTIE LEGISLATIVE/Article L6775-1 - 23077317.md
+++ b/01. PARTIE LEGISLATIVE/Article L6775-1 - 23077317.md
@@ -1,14 +1,19 @@
 # Article L6775-1
 
 Les dispositions du titre Ier, des chapitres Ier et II du titre II du livre V de la présente partie et celles des articles L.
-6527-9, L. 6531-1 et L. 6531-2 sont applicables en Polynésie française.
+6527-9, L. 6541-1 et L. 6541-2 sont applicables en Polynésie française.
 
 **Liens relatifs à cet article**
 
+	**Modifié par**:
+
+	  - Ordonnance n°2011-204 du 24 février 2011 - art. 6
+
 	**Cite**:
 
-	  - Code des transports - art. L6527-9 (V)
-	  - Code des transports - art. L6531-1 (V)
+	  - Code des transports - art. L6527-9
+	  - Code des transports - art. L6541-1
+	  - Code des transports - art. L6541-2
 
 	**Codifié par**:
 
