--- a/01. PARTIE LEGISLATIVE/Article L6785-1 - 23077244.md
+++ b/01. PARTIE LEGISLATIVE/Article L6785-1 - 23077244.md
@@ -1,10 +1,14 @@
 # Article L6785-1
 
-Les dispositions du titre Ier, des chapitres Ier, II et III du titre II, et du titre III du livre V de la présente partie
-sont applicables à Wallis-et-Futuna.
+Les dispositions du titre Ier, des chapitres Ier, II et III du titre II, et du titre IV du livre V de la présente partie sont
+applicables à Wallis-et-Futuna.
 
 **Liens relatifs à cet article**
 
 	**Codifié par**:
 
 	  - Ordonnance n°2010-1307 du 28 octobre 2010 - art. (V)
+
+	**Modifié par**:
+
+	  - Ordonnance n°2011-204 du 24 février 2011 - art. 6
