--- a/01. PARTIE LEGISLATIVE/Article L1802-2 - 23084989.md
+++ b/01. PARTIE LEGISLATIVE/Article L1802-2 - 23084989.md
@@ -10,13 +10,14 @@ leurs présidents respectifs ;
 3° Les attributions du tribunal de grande instance et de son président ainsi que celles du tribunal d'instance et de son
 président sont exercées par le tribunal de première instance et son président ;
 
-4° Les références au département ou à la région sont remplacées par des références à la collectivité départementale de
-Mayotte ;
+4° Les références au département ou à la région sont remplacées par des références au Département de Mayotte (1)  ;
 
-5° Le délégué du Gouvernement pour l'action de l'Etat en mer exerce les attributions du préfet maritime ;
+5° Les références au préfet maritime sont remplacées par des références au représentant de l'Etat compétent en mer ;
 
-6° Le chef du service des affaires maritimes exerce les attributions du directeur départemental des territoires et de la
-mer ;
+6° Les références au directeur départemental des territoires et de la mer, au directeur départemental ou interdépartemental
+des affaires maritimes, au directeur interrégional de la mer, au directeur régional des affaires maritimes ou au chef des
+services des affaires maritimes sont remplacées, selon les modalités d'organisation et les attributions des services chargés
+des activités maritimes, par des références au directeur de la mer ou à tout autre directeur ou chef de service compétent ;
 
 7° Les références au code général des impôts et au code des douanes sont remplacées respectivement par des références aux
 textes applicables localement en matière fiscale et au code des douanes de Mayotte ;
@@ -28,8 +29,18 @@ textes applicables localement en matière fiscale et au code des douanes de Mayo
 10° Les dispositions des actes communautaires auxquelles il est fait référence dans le présent code sont applicables à
 Mayotte en tant qu'elles sont nécessaires à la mise en œuvre des dispositions du présent code dans cette collectivité.
 
+**Nota:**
+
+(1) Ordonnance n° 2011-204 du 24 février 2011 art 2 15° a) : A compter de la première réunion suivant le renouvellement du
+conseil général de Mayotte en 2011, au 4°, les mots : "à la collectivité départementale de Mayotte" sont remplacés par les
+mots : "au Département de Mayotte".
+
 **Liens relatifs à cet article**
 
 	**Codifié par**:
 
 	  - Ordonnance n°2010-1307 du 28 octobre 2010 - art. (V)
+
+	**Modifié par**:
+
+	  - Ordonnance n°2011-204 du 24 février 2011 - art. 2
