--- a/01. PARTIE LEGISLATIVE/Article L1802-8 - 23084947.md
+++ b/01. PARTIE LEGISLATIVE/Article L1802-8 - 23084947.md
@@ -4,13 +4,15 @@ Les dispositions du présent code applicables à Wallis-et-Futuna sont ainsi ada
 
 1° Le représentant de l'Etat à Wallis-et-Futuna exerce les attributions dévolues au préfet de département et de région ; 
 
-2° Le délégué du Gouvernement pour l'action de l'Etat en mer exerce les attributions du préfet maritime ; 
+2° Les références au préfet maritime sont remplacées par des références au représentant de l'Etat compétent en mer ; 
 
-3° Le chef du service des affaires maritimes exerce les attributions du directeur départemental des territoires et de la
-mer ; 
+3° Les références au directeur départemental des territoires et de la mer, au directeur départemental ou interdépartemental
+des affaires maritimes, au directeur interrégional de la mer, au directeur régional des affaires maritimes ou au chef des
+services des affaires maritimes sont remplacées, selon les modalités d'organisation et les attributions des services chargés
+des activités maritimes, par des références au directeur ou chef de service compétent ; 
 
 4° Les attributions du tribunal de grande instance et de son président ainsi que celles du tribunal d'instance et de son
-président sont exercées par le tribunal de première instance et son président ; 
+président sont exercées par le tribunal de première instance et son président ;
 
 5° Les références au code du travail sont remplacées par des références à la loi n° 52-1322 du 15 décembre 1952 modifiée
 instituant un code du travail dans les territoires et territoires associés relevant du ministère chargé de l'outre-mer ; 
@@ -21,8 +23,12 @@ instituant un code du travail dans les territoires et territoires associés rele
 
 	**Cite**:
 
-	  - Loi n°52-1322 du 15 décembre 1952 (V)
+	  - Loi n°52-1322 du 15 décembre 1952
 
 	**Codifié par**:
 
 	  - Ordonnance n°2010-1307 du 28 octobre 2010 - art. (V)
+
+	**Modifié par**:
+
+	  - Ordonnance n°2011-204 du 24 février 2011 - art. 2
