--- a/01. PARTIE LEGISLATIVE/Article L3112-2 - 23083959.md
+++ b/01. PARTIE LEGISLATIVE/Article L3112-2 - 23083959.md
@@ -7,11 +7,20 @@ transporter.
 
 Ces contrats sont régis par l'article L. 1431-1.
 
+Les rapports entre les parties au contrat de services occasionnels sur les matières mentionnées au premier alinéa sont
+définis par une convention écrite conforme aux dispositions législatives régissant les contrats et, le cas échéant, aux
+dispositions impératives issues des conventions internationales.
+
+A défaut de convention écrite et sans préjudice des dispositions législatives régissant les contrats, les rapports entre les
+parties sont, de plein droit, fixés par des contrats types.
+
+Les clauses des contrats types sont établies par voie réglementaire.
+
+Sans préjudice des dispositions impératives issues des conventions internationales et à défaut de convention écrite
+définissant les rapports entre les parties au contrat sur les matières mentionnées au premier alinéa, les clauses des
+contrats types s'appliquent de plein droit aux contrats de transport international.
+
 **Liens relatifs à cet article**
-
-	**Anciens textes**:
-
-	  - Loi n°82-1153 du 30 décembre 1982 - art. 8 (Ab), alinéas 5 et 6, ecqc les services occasionnels publics de transports routiers non urbains de personnes, paragraphe II
 
 	**Cité par**:
 
@@ -19,8 +28,12 @@ Ces contrats sont régis par l'article L. 1431-1.
 
 	**Cite**:
 
-	  - Code des transports - art. L1431-1 (V)
+	  - Code des transports - art. L1431-1
 
 	**Codifié par**:
 
 	  - Ordonnance n°2010-1307 du 28 octobre 2010 - art. (V)
+
+	**Modifié par**:
+
+	  - Ordonnance n°2011-204 du 24 février 2011 - art. 3
