--- a/01. PARTIE LEGISLATIVE/Article L3312-1 - 23083715.md
+++ b/01. PARTIE LEGISLATIVE/Article L3312-1 - 23083715.md
@@ -1,9 +1,9 @@
 # Article L3312-1
 
 Lorsqu'un salarié appartenant au personnel roulant d'une entreprise de transport routier, à l'exception des entreprises de
-transport sanitaire, est un travailleur de nuit au sens de l'article L. 1321-7 ou lorsqu'il accomplit, sur une période de
-vingt-quatre heures, une partie de son travail dans l'intervalle compris entre 24 heures et 5 heures, sa durée quotidienne du
-travail ne peut excéder dix heures. 
+transport sanitaire, est un travailleur de nuit au sens de l'article L. 3122-31 du code du travail et sans préjudice de la
+période définie à l'article L. 1321-7 ou lorsqu'il accomplit, sur une période de vingt-quatre heures, une partie de son
+travail dans l'intervalle compris entre 24 heures et 5 heures, sa durée quotidienne du travail ne peut excéder dix heures. 
 
 Il ne peut être dérogé à ces dispositions qu'en cas de circonstances exceptionnelles, dans des conditions et selon des
 modalités fixées par voie réglementaire, après consultation des organisations syndicales représentatives au plan national des
@@ -11,13 +11,14 @@ employeurs et des salariés du secteur.
 
 **Liens relatifs à cet article**
 
-	**Anciens textes**:
+	**Modifié par**:
 
-	  - Code du travail - art. L213-11 (Ab), paragraphe III
+	  - Ordonnance n°2011-204 du 24 février 2011 - art. 3
 
 	**Cite**:
 
-	  - Code des transports - art. L1321-7 (V)
+	  - Code du travail - art. L3122-31
+	  - Code des transports - art. L1321-7
 
 	**Cité par**:
 
