--- a/01. PARTIE LEGISLATIVE/Article L5522-2 - 23079914.md
+++ b/01. PARTIE LEGISLATIVE/Article L5522-2 - 23079914.md
@@ -1,8 +1,19 @@
 # Article L5522-2
 
 Tout navire doit avoir à bord un effectif de marins suffisant en nombre et en niveau de qualification professionnelle pour
-garantir la sécurité du navire et de son personnel ainsi que le respect des dispositions relatives à la durée du travail et
-aux repos.
+garantir la sécurité du navire et des personnes à bord  ainsi que le respect des dispositions relatives à la durée du travail
+et aux repos.
+
+La fiche d'effectif désigne le document par lequel l'autorité maritime française atteste que l'effectif du navire satisfait
+aux exigences des conventions internationales suivantes et des mesures prises pour leur application :
+
+1° La convention internationale pour la sauvegarde de la vie humaine en mer, faite à Londres le 1er novembre 1974 modifiée ;
+
+2° La convention internationale sur les normes de formation des gens de mer, de délivrance des brevets et de veille, faite à
+Londres le 7 juillet 1978 modifiée ;
+
+3° La convention n° 180 sur la durée du travail des gens de mer et les effectifs des navires adoptée le 22 octobre 1996 par
+l'Organisation internationale du travail.
 
 Les modalités de fixation de l'effectif sont précisées par décret en Conseil d'Etat.
 
@@ -30,6 +41,14 @@ Les modalités de fixation de l'effectif sont précisées par décret en Conseil
 	  - Code des transports - art. R5232-8 (VD)
 	  - Code des transports - art. R5561-3 (VD)
 
+	**Modifié par**:
+
+	  - Ordonnance n°2011-204 du 24 février 2011 - art. 5
+
 	**Codifié par**:
 
 	  - Ordonnance n°2010-1307 du 28 octobre 2010 - art. (V)
+
+	**Cite**:
+
+	  - convention n°180
