--- a/01. PARTIE LEGISLATIVE/Article L5545-14 - 23079346.md
+++ b/01. PARTIE LEGISLATIVE/Article L5545-14 - 23079346.md
@@ -16,14 +16,18 @@ a) Le premier alinéa est complété par les mots : " à bord " ;
 b) Le deuxième alinéa est complété par les mots : " ou des délégués de bord " ; 
 
 c) Au quatrième alinéa, les mots : " le montant annuel moyen des cotisations d'accidents du travail prélevé " sont remplacés
-par les mots : " la moitié du montant annuel moyen des cotisations dues à l'Etablissement national des invalides de la marine
-au titre de la caisse générale de prévoyance des marins ".
+par les mots : " la moitié du montant annuel moyen des cotisations dues au titre du régime de prévoyance des marins ".
 
 **Liens relatifs à cet article**
 
-	**Anciens textes**:
+	**Modifié par**:
 
-	  - Code du travail - art. L742-5 (Ab)
+	  - Ordonnance n°2011-204 du 24 février 2011 - art. 5
+
+	**Cite**:
+
+	  - Code du travail - art. L4732-1 (V)
+	  - Code du travail - art. L4741-11 (V)
 
 	**Cité par**:
 
