--- a/01. PARTIE LEGISLATIVE/Article L6421-1 - 23077808.md
+++ b/01. PARTIE LEGISLATIVE/Article L6421-1 - 23077808.md
@@ -2,15 +2,15 @@
 
 Le contrat de transport des passagers est constaté par la délivrance d'un billet, individuel ou collectif.
 
-Le contrat de transport des bagages est constaté par bagage enregistré par la délivrance d'une fiche d'identification par
-bagage enregistré.
+Le contrat de transport des bagages est constaté par la délivrance d'une fiche d'identification pour chaque bagage
+enregistré.
 
 **Liens relatifs à cet article**
-
-	**Anciens textes**:
-
-	  - Code de l'aviation civile - art. L322-1 (Ab)
 
 	**Codifié par**:
 
 	  - Ordonnance n°2010-1307 du 28 octobre 2010 - art. (V)
+
+	**Modifié par**:
+
+	  - Ordonnance n°2011-204 du 24 février 2011 - art. 6
