--- a/01. PARTIE LEGISLATIVE/Article L6541-2 - 23648699.md
+++ b/01. PARTIE LEGISLATIVE/Article L6541-2 - 23648699.md
@@ -1,4 +1,4 @@
-# Article L6531-2
+# Article L6541-2
 
 Est puni d'un mois d'emprisonnement et de 3 750 € d'amende le fait d'exercer un des emplois correspondant aux brevets,
 licences et qualifications du personnel navigant professionnel de l'aéronautique civile en infraction aux dispositions du
@@ -9,14 +9,15 @@ remplissant pas les conditions exigées par les dispositions du même titre.
 
 **Liens relatifs à cet article**
 
-	**Liens**:
+	**Créé par**:
 
-	  - TRANSFERE: Ordonnance n°2011-204 du 24 février 2011 - art. 6
+	  - Ordonnance n°2011-204 du 24 février 2011 - art. 6
 
 	**Anciens textes**:
 
-	  - Code de l'aviation civile - art. L427-1 (Ab)
+	  - Code des transports - art. L6531-2 (T)
 
-	**Nouveaux textes**:
+	**Cité par**:
 
-	  - Code des transports - art. L6541-2 (V)
+	  - Code des transports - art. L6765-1 (V)
+	  - Code des transports - art. L6775-1 (V)
