--- a/01. PARTIE LEGISLATIVE/Article L2242-4 - 23084130.md
+++ b/01. PARTIE LEGISLATIVE/Article L2242-4 - 23084130.md
@@ -30,9 +30,15 @@ réfléchissants, lorsqu'elles sont de nature à créer un danger pour la circul
 apportent pour l'observation des signaux par les agents du chemin de fer ;
 
 8° De faire usage du signal d'alarme ou d'arrêt mis à la disposition des voyageurs de manière illégitime et dans l'intention
-de troubler ou d'entraver la mise en marche ou la circulation des trains.
+de troubler ou d'entraver la mise en marche ou la circulation des trains ;
+
+9° De pénétrer sans autorisation dans les espaces affectés à la conduite des trains.
 
 **Liens relatifs à cet article**
+
+	**Modifié par**:
+
+	  - Loi n°2011-267 du 14 mars 2011 - art. 57
 
 	**Cité par**:
 
@@ -41,10 +47,6 @@ de troubler ou d'entraver la mise en marche ou la circulation des trains.
 	  - Décret n°2016-903 du 1er juillet 2016 - art. 1 (V)
 	  - Code des transports - art. L3114-3 (V)
 	  - Code des transports - art. R3116-33 (V)
-
-	**Anciens textes**:
-
-	  - Loi du 15 juillet 1845 - art. 21 (Ab)
 
 	**Codifié par**:
 
