--- a/01. PARTIE LEGISLATIVE/Article L6342-2 - 23078082.md
+++ b/01. PARTIE LEGISLATIVE/Article L6342-2 - 23078082.md
@@ -15,11 +15,28 @@ République. Ils ne procèdent à la fouille des bagages à main qu'avec le cons
 de sécurité qu'avec le consentement de la personne. Dans ce cas, la palpation de sécurité est faite par une personne du même
 sexe que la personne qui en fait l'objet.
 
+Ces fouilles et visites peuvent être réalisées, avec le consentement de la personne, au moyen d'un dispositif d'imagerie
+utilisant des ondes millimétriques dans les conditions visées à l'alinéa précédent. En cas de refus, la personne est soumise
+à un autre dispositif de contrôle (1). 
+
+L'analyse des images visualisées est effectuée par des opérateurs ne connaissant pas l'identité de la personne et ne pouvant
+visualiser simultanément celle-ci et son image produite par le scanner corporel.L'image produite par le scanner millimétrique
+doit comporter un système brouillant la visualisation du visage. Aucun stockage ou enregistrement des images n'est autorisé
+(1). 
+
+Un arrêté conjoint du ministre chargé de l'aviation civile et du ministre de l'intérieur détermine les aéroports dans
+lesquels le recours au contrôle par dispositif d'imagerie utilisant les ondes millimétriques est autorisé (1). 
+
 Les agréments prévus par le deuxième alinéa sont refusés ou retirés lorsque la moralité de la personne ou son comportement ne
 présentent pas les garanties requises au regard de la sûreté de l'Etat, de la sécurité publique, de la sécurité des
 personnes, de l'ordre public ou sont incompatibles avec l'exercice de ces missions.
 
 Les conditions d'application du présent article sont fixées par décret en Conseil d'Etat.
+
+**Nota:**
+
+(1) Loi n° 2011-267 du 14 mars 2011 article 25 II : Les troisième à cinquième alinéas de l'article L. 6342-2 du code des
+transports sont applicables durant une période de trois années à compter de la promulgation de la présente loi.
 
 **Liens relatifs à cet article**
 
@@ -39,13 +56,13 @@ Les conditions d'application du présent article sont fixées par décret en Con
 	  - Code des transports - art. L6773-7 (V)
 	  - Code des transports - art. L6783-7 (V)
 
+	**Modifié par**:
+
+	  - Loi n°2011-267 du 14 mars 2011 - art. 25
+
 	**Cite**:
 
 	  - Code de procédure pénale - art. 21
-
-	**Anciens textes**:
-
-	  - Code de l'aviation civile - art. L282-8 (Ab), dispositions sur la sûreté en métropole
 
 	**Codifié par**:
 
