--- a/01. PARTIE LEGISLATIVE/Article L1883-2 - 23084785.md
+++ b/01. PARTIE LEGISLATIVE/Article L1883-2 - 23084785.md
@@ -3,7 +3,7 @@
 Pour son application à Wallis-et-Futuna, l'article 1631-1 est ainsi rédigé : 
 
 " Art.L. 1631-1.-Les conditions dans lesquelles le représentant de l'Etat peut prescrire la mise en œuvre de systèmes de
-vidéosurveillance par les gestionnaires d'infrastructures, les autorités et personnes exploitant des transports collectifs
+vidéoprotection par les gestionnaires d'infrastructures, les autorités et personnes exploitant des transports collectifs
 relevant de l'activité de transport intérieur et les exploitants d'aéroports ouverts au trafic international, sont fixées par
 l'article 10-1 de la loi n° 95-73 du 21 janvier 1995 d'orientation et de programmation relative à la sécurité. "
 
@@ -12,6 +12,10 @@ l'article 10-1 de la loi n° 95-73 du 21 janvier 1995 d'orientation et de progra
 	**Cite**:
 
 	  - Loi n°95-73 du 21 janvier 1995 - art. 10-1
+
+	**Modifié par**:
+
+	  - Loi n°2011-267 du 14 mars 2011 - art. 17
 
 	**Codifié par**:
 
