--- a/01. PARTIE LEGISLATIVE/Article L2241-2 - 23084154.md
+++ b/01. PARTIE LEGISLATIVE/Article L2241-2 - 23084154.md
@@ -4,22 +4,26 @@ Pour l'établissement des procès-verbaux, les agents de l'exploitant mentionné
 habilités selon les cas à recueillir ou à relever l'identité et l'adresse du contrevenant, dans les conditions prévues par
 l'article 529-4 du code de procédure pénale. 
 
-Si le contrevenant refuse ou se trouve dans l'impossibilité de justifier de son identité, ces agents en avisent sans délai et
-par tout moyen un officier de police judiciaire territorialement compétent. Sur l'ordre de ce dernier, les agents visés au
-premier alinéa du II de l'article 529-4 du code de procédure pénale peuvent être autorisés à retenir l'auteur de l'infraction
-le temps strictement nécessaire à l'arrivée de l'officier de police judiciaire ou, le cas échéant, à le conduire sur-le-champ
-devant lui.
+Si le contrevenant refuse ou se déclare dans l'impossibilité de justifier de son identité, les agents mentionnés au premier
+alinéa du II de l'article 529-4 du code de procédure pénale en avisent sans délai et par tout moyen un officier de police
+judiciaire territorialement compétent.
+
+Pendant le temps nécessaire à l'information et à la décision de l'officier de police judiciaire, le contrevenant est tenu de
+demeurer à la disposition d'un agent visé au même premier alinéa.
+
+Sur l'ordre de l'officier de police judiciaire, les agents peuvent conduire l'auteur de l'infraction devant lui ou bien le
+retenir le temps nécessaire à son arrivée ou à celle d'un agent de police judiciaire agissant sous son contrôle.
 
 **Liens relatifs à cet article**
 
-	**Anciens textes**:
+	**Modifié par**:
 
-	  - Loi du 15 juillet 1845 - art. 23-2 (Ab)
+	  - Loi n°2011-267 du 14 mars 2011 - art. 58
 
 	**Cite**:
 
-	  - Code de procédure pénale - art. 529-4 (V)
-	  - Code des transports - art. L2241-1 (V)
+	  - Code de procédure pénale - art. 529-4
+	  - Code des transports - art. L2241-1
 
 	**Codifié par**:
 
