--- a/01. PARTIE LEGISLATIVE/Article L2241-6 - 23084144.md
+++ b/01. PARTIE LEGISLATIVE/Article L2241-6 - 23084144.md
@@ -1,12 +1,14 @@
 # Article L2241-6
 
-Toute personne qui contrevient en cours de transport aux dispositions tarifaires ou à des dispositions dont l'inobservation
-est susceptible soit de compromettre la sécurité des personnes ou la régularité des circulations, soit de troubler l'ordre
-public peut se voir enjoindre par les agents mentionnés au 4° du I de l'article L. 2241-1 de descendre du véhicule de
-transport ferroviaire ou guidé au premier point d'arrêt suivant la constatation des faits. 
+Toute personne qui contrevient aux dispositions tarifaires ou à des dispositions dont l'inobservation est susceptible soit de
+compromettre la sécurité des personnes ou la régularité des circulations, soit de troubler l'ordre public peut se voir
+enjoindre par les agents mentionnés au I de l'article L. 2241-1 de descendre du véhicule de transport ferroviaire ou routier
+au premier point d'arrêt suivant la constatation des faits ou de quitter sans délai les espaces, gares ou stations gérés par
+l'exploitant du réseau de transport public. 
 
 En cas de refus d'obtempérer, les agents spécialement désignés par l'exploitant peuvent contraindre l'intéressé à descendre
-du véhicule de transport ferroviaire ou guidé et, en tant que de besoin, requérir l'assistance de la force publique. 
+du véhicule ou à quitter sans délai les espaces, gares ou stations et, en tant que de besoin, requérir l'assistance de la
+force publique. 
 
 Ils informent de cette mesure, sans délai et par tout moyen, un officier de police judiciaire territorialement compétent. 
 
@@ -15,6 +17,10 @@ santé.
 
 **Liens relatifs à cet article**
 
+	**Modifié par**:
+
+	  - Loi n°2011-267 du 14 mars 2011 - art. 59
+
 	**Cité par**:
 
 	  - Décret n°2016-541 du 3 mai 2016 - art. 3 (V)
@@ -22,7 +28,7 @@ santé.
 
 	**Cite**:
 
-	  - Loi du 15 juillet 1845 - art. 23-2 (Ab)
+	  - Code des transports - art. L2241-1
 
 	**Codifié par**:
 
