--- a/01. PARTIE LEGISLATIVE/Article L1621-1 - 23085158.md
+++ b/01. PARTIE LEGISLATIVE/Article L1621-1 - 23085158.md
@@ -8,10 +8,12 @@ transport fluvial ;
 2° Les accidents ou incidents de transport terrestre s'entendent de ceux où l'accident ou l'incident est survenu sur le
 territoire national ; 
 
-3° Par " événement de mer ", on entend tout accident de mer et incident de mer tels que définis par le code de l'organisation
-maritime internationale pour les enquêtes sur les accidents ; 
+3° Par " événement de mer ", on entend tout accident de mer et incident de mer tels que définis par le code de normes
+internationales et pratiques recommandées applicables à une enquête de sécurité sur un accident de mer ou un incident de mer
+(code pour les enquêtes sur les accidents), adopté à Londres le 16 mai 2008 ; 
 
-4° Les événements de mer pouvant donner lieu à enquête technique sont : 
+4° Les événements de mer pouvant donner lieu à une enquête technique, conduite dans le respect du code mentionné au 3°
+sont : 
 
 a) Ceux affectant les navires civils battant pavillon français où qu'ils se trouvent ainsi que les navires civils battant un
 autre pavillon lorsque l'événement de mer s'est produit dans les eaux intérieures ou dans la mer territoriale française ; 
@@ -22,9 +24,9 @@ lesquels la France exerce sa juridiction.
 
 **Liens relatifs à cet article**
 
-	**Anciens textes**:
+	**Modifié par**:
 
-	  - Loi n°2002-3 du 3 janvier 2002 - art. 14 (VT), alinéas 2 et 3, ecqc le champ géographique de l'accident ou incident de transport terrestre, paragraphe II
+	  - Ordonnance n°2011-635 du 9 juin 2011 - art. 1
 
 	**Cité par**:
 
@@ -39,7 +41,7 @@ lesquels la France exerce sa juridiction.
 
 	**Cite**:
 
-	  - Code des transports - art. L2000-1 (VD)
+	  - Code des transports - art. L2000-1
 
 	**Codifié par**:
 
