--- a/01. PARTIE LEGISLATIVE/Article L5222-2 - 23081194.md
+++ b/01. PARTIE LEGISLATIVE/Article L5222-2 - 23081194.md
@@ -1,23 +1,33 @@
 # Article L5222-2
 
-Les procès-verbaux établis par les commandants des bâtiments de l'Etat sont transmis au directeur départemental des
-territoires et de la mer dans la circonscription duquel ils se trouvent et, en cas d'empêchement, au premier directeur
-départemental des territoires et de la mer avec lequel ils peuvent entrer en contact. 
+Les procès-verbaux établis par les commandants des bâtiments de l'Etat sont transmis au directeur interrégional de la mer
+dans la circonscription duquel ils se trouvent. 
 
-Les procès-verbaux établis par les fonctionnaires et agents mentionnés aux 2° à 7° de l'article L. 5222-1 sont transmis au
-directeur départemental des territoires et de la mer dont ils relèvent. 
+Les procès-verbaux établis par les fonctionnaires et agents mentionnés aux 1° à 7° de l'article L. 5222-1 et au 3° de
+l'article L. 5336-5 sont également transmis au directeur départemental des territoires et de la mer dans le ressort duquel a
+été commise l'infraction. 
 
 Ces procès-verbaux font foi jusqu'à preuve du contraire.
 
+**Nota:**
+
+Conformément à l'article 21 de l'ordonnance n° 2012-1218 du 2 novembre 2012, les dispositions de l'article L. 5222-2 seront
+abrogées selon des modalités fixées par décret, et au plus tard à compter du 1er janvier 2015.
+
 **Liens relatifs à cet article**
 
-	**Anciens textes**:
+	**Modifié par**:
 
-	  - Code disciplinaire et pénal de la marine marcha... - art. 27 (VT), ecqc les infractions au titre II
+	  - Ordonnance n°2011-635 du 9 juin 2011 - art. 3
+
+	**Abrogé par**:
+
+	  - Ordonnance n°2012-1218 du 2 novembre 2012 - art. 18 (V)
 
 	**Cite**:
 
-	  - Code des transports - art. L5222-1 (V)
+	  - Code des transports - art. L5222-1
+	  - Code des transports - art. L5336-5
 
 	**Cité par**:
 
