--- a/01. PARTIE LEGISLATIVE/Article L5771-1 - 23078616.md
+++ b/01. PARTIE LEGISLATIVE/Article L5771-1 - 23078616.md
@@ -2,9 +2,15 @@
 
 Les dispositions du chapitre Ier du titre Ier du livre Ier sont applicables en Polynésie française, ainsi que celles des
 chapitres Ier et II du titre III lorsque l'événement de mer se produit en dehors des eaux maritimes intérieures de la
-Polynésie française, et celles des chapitres Ier et II du titre IV.
+Polynésie française, et celles des chapitres Ier et II du titre IV. 
+
+Les dispositions de l'article L. 5113-1 sont applicables en Polynésie française.
 
 **Liens relatifs à cet article**
+
+	**Cite**:
+
+	  - Code des transports - art. L5113-1 (V)
 
 	**Cité par**:
 
@@ -13,3 +19,7 @@ Polynésie française, et celles des chapitres Ier et II du titre IV.
 	**Codifié par**:
 
 	  - Ordonnance n°2010-1307 du 28 octobre 2010 - art. (V)
+
+	**Modifié par**:
+
+	  - Ordonnance n°2011-635 du 9 juin 2011 - art. 10
