--- a/01. PARTIE LEGISLATIVE/Article L1621-14 - 23085126.md
+++ b/01. PARTIE LEGISLATIVE/Article L1621-14 - 23085126.md
@@ -4,7 +4,10 @@ Les enquêteurs techniques peuvent rencontrer toute personne concernée et obtie
 secret professionnel, communication de toute information ou de tout document concernant les circonstances, entreprises,
 organismes et matériels en relation avec l'accident ou l'incident et concernant notamment la construction, la certification,
 l'entretien, l'exploitation des matériels, la préparation du transport, la conduite, l'information et le contrôle du ou des
-engins de transport impliqués.
+engins de transport impliqués. Les enquêteurs peuvent organiser ces rencontres en l'absence de toute personne qui pourrait
+avoir intérêt à entraver l'enquête de sécurité. Les témoignages, informations et documents recueillis ne peuvent être
+utilisés par les enquêteurs techniques à d'autres fins que l'enquête technique elle-même, à moins qu'un intérêt public
+supérieur ne justifie leur divulgation. 
 
 Dans les mêmes conditions, les enquêteurs techniques peuvent demander communication de toute information ou de tout document
 à caractère personnel concernant la formation, la qualification, l'aptitude à la conduite des personnels ou le contrôle de
@@ -17,10 +20,9 @@ Les conditions d'application du présent article sont fixées par décret en Con
 
 **Liens relatifs à cet article**
 
-	**Anciens textes**:
+	**Modifié par**:
 
-	  - Loi n°2002-3 du 3 janvier 2002 - art. 19 (VT), alinéas 1, 2 et 3, phrase 2
-	  - Code de l'aviation civile - art. L721-5 (VT)
+	  - Ordonnance n°2011-635 du 9 juin 2011 - art. 1
 
 	**Cité par**:
 
