--- a/01. PARTIE LEGISLATIVE/Article L5113-1 - 23081870.md
+++ b/01. PARTIE LEGISLATIVE/Article L5113-1 - 23081870.md
@@ -1,7 +1,8 @@
 # Article L5113-1
 
-Les règles générales de construction destinées à assurer la sécurité, la sûreté, l'hygiène et l'habitabilité à bord des
-navires, ainsi que la prévention de la pollution par les navires, sont fixées par voie réglementaire.
+Les règles générales de construction destinées à assurer la sécurité, la sûreté, l'hygiène, la santé et la sécurité au
+travail et l'habitabilité à bord des navires, ainsi que la prévention de la pollution par les navires, sont fixées par voie
+réglementaire.
 
 **Liens relatifs à cet article**
 
@@ -13,3 +14,7 @@ navires, ainsi que la prévention de la pollution par les navires, sont fixées 
 	**Codifié par**:
 
 	  - Ordonnance n°2010-1307 du 28 octobre 2010 - art. (V)
+
+	**Modifié par**:
+
+	  - Ordonnance n°2011-635 du 9 juin 2011 - art. 2
