--- a/01. PARTIE LEGISLATIVE/Article L5121-5 - 23081587.md
+++ b/01. PARTIE LEGISLATIVE/Article L5121-5 - 23081587.md
@@ -5,17 +5,17 @@ limitation de la responsabilité en matière de créances maritimes, faite à Lo
 
 Toutefois, les limites de la responsabilité du propriétaire du navire dont la jauge est inférieure ou égale à 300 sont égales
 à la moitié de celles fixées par les dispositions de l'article 6 de la convention, pour les navires dont la jauge est
-inférieure ou égale à 500.
+inférieure ou égale à 2 000.
 
 **Liens relatifs à cet article**
 
-	**Anciens textes**:
+	**Modifié par**:
 
-	  - Loi n°67-5 du 3 janvier 1967 - art. 61 (Ab)
+	  - Ordonnance n°2011-635 du 9 juin 2011 - art. 2
 
 	**Cite**:
 
-	  - Code des transports - art. L5121-3 (V)
+	  - Code des transports - art. L5121-3
 
 	**Cité par**:
 
