--- a/01. PARTIE LEGISLATIVE/Article L5132-2 - 23081439.md
+++ b/01. PARTIE LEGISLATIVE/Article L5132-2 - 23081439.md
@@ -1,16 +1,9 @@
 # Article L5132-2
 
-Tout fait d'assistance ayant eu un résultat utile donne lieu, dans ce cas seulement, à une rémunération équitable dont le
-montant ne peut dépasser la valeur des choses sauvées.
-
-Une rémunération est due même si l'assistance a eu lieu entre navires appartenant au même propriétaire. Toutefois, les
-dispositions du présent alinéa ne sont pas applicables aux navires ou bateaux de l'Etat.
+Le capitaine peut conclure des contrats d'assistance au nom du propriétaire du navire. Le capitaine ou le propriétaire du
+navire peut conclure de tels contrats au nom du propriétaire des biens se trouvant à bord du navire.
 
 **Liens relatifs à cet article**
-
-	**Anciens textes**:
-
-	  - Loi n°67-545 du 7 juillet 1967 - art. 10 (Ab), art. 13 (Ab)
 
 	**Cité par**:
 
@@ -19,3 +12,7 @@ dispositions du présent alinéa ne sont pas applicables aux navires ou bateaux 
 	**Codifié par**:
 
 	  - Ordonnance n°2010-1307 du 28 octobre 2010 - art. (V)
+
+	**Modifié par**:
+
+	  - Ordonnance n°2011-635 du 9 juin 2011 - art. 2
