--- a/01. PARTIE LEGISLATIVE/Article L5132-6 - 23081422.md
+++ b/01. PARTIE LEGISLATIVE/Article L5132-6 - 23081422.md
@@ -1,17 +1,23 @@
 # Article L5132-6
 
-Il n'est dû aucune rémunération d'assistance pour les envois postaux de toute nature.
+Un contrat ou certaines de ses clauses peuvent être annulés ou modifiés, si : 
+
+1° Le contrat a été conclu sous une pression abusive ou sous l'influence du danger et que ses clauses ne sont pas
+équitables ; ou 
+
+2° Si le paiement convenu en vertu du contrat est beaucoup trop élevé ou beaucoup trop faible pour les services effectivement
+rendus.
 
 **Liens relatifs à cet article**
-
-	**Anciens textes**:
-
-	  - Loi n°67-545 du 7 juillet 1967 - art. 20 (Ab)
-
-	**Cité par**:
-
-	  - Code des transports - art. L5132-1 (V)
 
 	**Codifié par**:
 
 	  - Ordonnance n°2010-1307 du 28 octobre 2010 - art. (V)
+
+	**Modifié par**:
+
+	  - Ordonnance n°2011-635 du 9 juin 2011 - art. 2
+
+	**Cité par**:
+
+	  - Code des transports - art. L5132-1 (V)
