--- a/01. PARTIE LEGISLATIVE/Article L5132-8 - 23081418.md
+++ b/01. PARTIE LEGISLATIVE/Article L5132-8 - 23081418.md
@@ -1,20 +1,17 @@
 # Article L5132-8
 
-Toute convention d'assistance peut, à la requête de l'une des parties, être annulée ou modifiée par la juridiction
-compétente, si elle estime que les conditions convenues ne sont pas équitables, compte tenu du service rendu et des bases de
-rémunération indiquées à l'article L. 5132-9 ou que le service rendu ne présente pas les caractères d'une véritable
-assistance, quelque qualification que les parties lui aient donnée.
+Il n'est dû aucune rémunération pour les personnes sauvées. 
+
+Toutefois, le sauveteur de vies humaines qui a participé aux services rendus à l'occasion de l'accident ayant donné lieu aux
+opérations d'assistance a droit à une part équitable du paiement alloué à l'assistant pour avoir sauvé le navire ou d'autres
+biens ou pour avoir prévenu ou limité les dommages à l'environnement.
 
 **Liens relatifs à cet article**
-
-	**Anciens textes**:
-
-	  - Loi n°67-545 du 7 juillet 1967 - art. 15 (Ab)
-
-	**Cite**:
-
-	  - Code des transports - art. L5132-9 (V)
 
 	**Codifié par**:
 
 	  - Ordonnance n°2010-1307 du 28 octobre 2010 - art. (V)
+
+	**Modifié par**:
+
+	  - Ordonnance n°2011-635 du 9 juin 2011 - art. 2
