--- a/01. PARTIE LEGISLATIVE/Article L5241-13 - 23081032.md
+++ b/01. PARTIE LEGISLATIVE/Article L5241-13 - 23081032.md
@@ -1,20 +1,20 @@
 # Article L5241-13
 
-Est puni d'un an d'emprisonnement et de 15 000 € d'amende le fait, pour l'armateur ou le propriétaire d'un navire, de faire
-naviguer celui-ci en violation de l'interdiction de départ prévue à l'article L. 5241-5. 
+Est puni de deux ans d'emprisonnement et de 150 000 € d'amende le fait, pour l'exploitant ou le propriétaire d'un navire, de
+faire naviguer celui-ci en violation de l'interdiction de départ prévue à l'article L. 5241-5. 
 
 Est puni des mêmes peines le capitaine qui fait naviguer un tel navire en violation d'une telle interdiction.
 
 **Liens relatifs à cet article**
 
-	**Anciens textes**:
-
-	  - Loi n°83-581 du 5 juillet 1983 - art. 7-1 (Ab)
-
-	**Cite**:
-
-	  - Code des transports - art. L5241-5 (V)
-
 	**Codifié par**:
 
 	  - Ordonnance n°2010-1307 du 28 octobre 2010 - art. (V)
+
+	**Modifié par**:
+
+	  - Ordonnance n°2011-635 du 9 juin 2011 - art. 4
+
+	**Cite**:
+
+	  - Code des transports - art. L5241-5
