--- a/01. PARTIE LEGISLATIVE/Article L5241-14 - 23081030.md
+++ b/01. PARTIE LEGISLATIVE/Article L5241-14 - 23081030.md
@@ -1,17 +1,20 @@
 # Article L5241-14
 
-Est puni d'un an d'emprisonnement et de 15 000 € d'amende le fait pour quiconque de s'opposer à l'exercice des missions de
-contrôle dont sont chargés les fonctionnaires et agents de l'Etat mentionnés aux articles L. 5243-1 à L. 5243-5.
+Est puni d'un an d'emprisonnement et de 75 000 € d'amende le fait pour quiconque de s'opposer à l'exercice des missions de
+contrôle dont sont chargés les fonctionnaires et agents de l'Etat mentionnés à l'article L. 5243-5 et les personnels des
+sociétés de classification habilitées et des organismes agréés mentionnés aux articles L. 5241-4 et L. 5241-4-2.
 
 **Liens relatifs à cet article**
 
-	**Anciens textes**:
+	**Modifié par**:
 
-	  - Loi n°83-581 du 5 juillet 1983 - art. 7 (Ab), alinéa 3
+	  - Ordonnance n°2011-635 du 9 juin 2011 - art. 4
 
 	**Cite**:
 
-	  - Code des transports - art. L5243-1 (V)
+	  - Code des transports - art. L5241-4
+	  - Code des transports - art. L5241-4-2
+	  - Code des transports - art. L5243-5
 
 	**Codifié par**:
 
