--- a/01. PARTIE LEGISLATIVE/Article L5241-15 - 23081028.md
+++ b/01. PARTIE LEGISLATIVE/Article L5241-15 - 23081028.md
@@ -1,8 +1,8 @@
 # Article L5241-15
 
-Est puni d'un an d'emprisonnement et de 15 000 € d'amende le fait de vendre à un utilisateur des matériels de sécurité ou de
-prévention de la pollution n'ayant pas obtenu l'approbation, la marque européenne de conformité ou l'autorisation d'usage
-exigée.
+Est puni d'un an d'emprisonnement et de 150 000 € d'amende le fait de vendre ou de proposer à la vente, d'installer ou de
+faire installer des matériels de sécurité ou de prévention de la pollution ou d'autres équipements marins requis par la
+réglementation n'ayant pas obtenu l'approbation, la marque européenne de conformité ou l'autorisation d'usage exigée.
 
 Les mêmes peines sont applicables au fabricant qui, ayant obtenu l'approbation ou l'autorisation d'usage pour un prototype de
 navire ou de matériel de sécurité ou de prévention de la pollution, livre un matériel de série qui n'est pas identique à ce
@@ -22,10 +22,10 @@ prototype.
 	  - Loi du 17 décembre 1926 - art. 36 (V)
 	  - Loi du 17 décembre 1926 - art. 37 (V)
 
-	**Anciens textes**:
-
-	  - Loi n°83-581 du 5 juillet 1983 - art. 8 (Ab)
-
 	**Codifié par**:
 
 	  - Ordonnance n°2010-1307 du 28 octobre 2010 - art. (V)
+
+	**Modifié par**:
+
+	  - Ordonnance n°2011-635 du 9 juin 2011 - art. 4
