--- a/01. PARTIE LEGISLATIVE/Article L5241-2 - 23081089.md
+++ b/01. PARTIE LEGISLATIVE/Article L5241-2 - 23081089.md
@@ -1,7 +1,10 @@
 # Article L5241-2
 
-Les mesures d'entretien destinées à assurer la sécurité à bord des navires et la prévention de la pollution par les navires
-sont fixées par voie réglementaire.
+Les règles générales d'entretien et d'exploitation destinées à assurer la sécurité et la sûreté à bord des navires,
+l'habitabilité de ces derniers ainsi que la prévention des risques professionnels maritimes et la prévention de la pollution
+par les navires sont fixées par voie réglementaire.
+
+Le propriétaire ou l'exploitant du navire maintient le navire et ses équipements en conformité avec ces règles générales.
 
 **Liens relatifs à cet article**
 
@@ -16,3 +19,7 @@ sont fixées par voie réglementaire.
 	**Codifié par**:
 
 	  - Ordonnance n°2010-1307 du 28 octobre 2010 - art. (V)
+
+	**Modifié par**:
+
+	  - Ordonnance n°2011-635 du 9 juin 2011 - art. 4
