--- a/01. PARTIE LEGISLATIVE/Article L5241-4 - 23081082.md
+++ b/01. PARTIE LEGISLATIVE/Article L5241-4 - 23081082.md
@@ -1,17 +1,13 @@
 # Article L5241-4
 
 Les titres de sécurité ou les certificats de prévention de la pollution sont délivrés par l'autorité administrative ou par
-des sociétés de classification agréées.
+des sociétés de classification habilitées dans des conditions fixées par décret en Conseil d'Etat.
 
 Ils peuvent faire l'objet de mesures de suspension ou de retrait.
 
 Leur délivrance, leur renouvellement et leur validation sont subordonnés à des visites du navire.
 
 **Liens relatifs à cet article**
-
-	**Anciens textes**:
-
-	  - Loi n°83-581 du 5 juillet 1983 - art. 3 (Ab), alinéa 1
 
 	**Cité par**:
 
@@ -23,3 +19,7 @@ Leur délivrance, leur renouvellement et leur validation sont subordonnés à de
 	**Codifié par**:
 
 	  - Ordonnance n°2010-1307 du 28 octobre 2010 - art. (V)
+
+	**Modifié par**:
+
+	  - Ordonnance n°2011-635 du 9 juin 2011 - art. 4
