--- a/01. PARTIE LEGISLATIVE/Article L5241-8 - 23081060.md
+++ b/01. PARTIE LEGISLATIVE/Article L5241-8 - 23081060.md
@@ -1,7 +1,7 @@
 # Article L5241-8
 
-Les modalités d'application des dispositions du présent chapitre relative aux visites des navires sont précisées par décret
-en Conseil d'Etat.
+Les modalités d'application des dispositions du présent chapitre relative aux visites et inspections des navires sont
+précisées par décret en Conseil d'Etat.
 
 **Liens relatifs à cet article**
 
@@ -13,3 +13,7 @@ en Conseil d'Etat.
 	**Codifié par**:
 
 	  - Ordonnance n°2010-1307 du 28 octobre 2010 - art. (V)
+
+	**Modifié par**:
+
+	  - Ordonnance n°2011-635 du 9 juin 2011 - art. 4
