--- a/01. PARTIE LEGISLATIVE/Article L5242-10 - 23080963.md
+++ b/01. PARTIE LEGISLATIVE/Article L5242-10 - 23080963.md
@@ -1,6 +1,6 @@
 # Article L5242-10
 
-Est puni de 15 000 € d'amende le fait, pour le capitaine d'un navire étranger transportant en colis une cargaison constituée
+Est puni de 75 000 € d'amende le fait, pour le capitaine d'un navire étranger transportant en colis une cargaison constituée
 de tout ou partie de marchandises dangereuses au sens de la convention internationale pour la sauvegarde de la vie humaine en
 mer, faite à Londres le 1er novembre 1974, et qui, naviguant dans les eaux territoriales, a subi un événement de mer
 entraînant ou risquant d'entraîner la perte par-dessus bord en mer de telles marchandises, de ne pas adresser, dès qu'il en a
@@ -22,14 +22,14 @@ en matière douanière, fiscale ou sanitaire ou constituer un danger :
 
 **Liens relatifs à cet article**
 
-	**Anciens textes**:
+	**Codifié par**:
 
-	  - Loi n°83-581 du 5 juillet 1983 - art. 7-2 (Ab), alinéa 2
+	  - Ordonnance n°2010-1307 du 28 octobre 2010 - art. (V)
+
+	**Modifié par**:
+
+	  - Ordonnance n°2011-635 du 9 juin 2011 - art. 5
 
 	**Cité par**:
 
 	  - Code des transports - art. L5242-11 (V)
-
-	**Codifié par**:
-
-	  - Ordonnance n°2010-1307 du 28 octobre 2010 - art. (V)
