--- a/01. PARTIE LEGISLATIVE/Article L5242-11 - 23080957.md
+++ b/01. PARTIE LEGISLATIVE/Article L5242-11 - 23080957.md
@@ -1,17 +1,17 @@
 # Article L5242-11
 
-Est puni de 15 000 € d'amende le fait, pour le capitaine d'un navire mentionné à l'article L. 5242-10 naviguant dans la zone
+Est puni de 75 000 € d'amende le fait, pour le capitaine d'un navire mentionné à l'article L. 5242-10 naviguant dans la zone
 économique mentionnée à l'article 1er de la loi n° 76-655 du 16 juillet 1976 relative à la zone économique et à la zone de
 protection écologique au large des côtes du territoire de la République, d'omettre de remplir l'obligation mentionnée au même
-article, dès lors que la perte ou le risque de perte de marchandises dangereuses peut constituer une menace :
+article, dès lors que la perte ou le risque de perte de marchandises dangereuses peut constituer une menace : 
 
 1° Pour l'exploration, l'exploitation, la conservation et la gestion des ressources naturelles, biologiques ou non
 biologiques, des eaux surjacentes aux fonds marins, des fonds marins et de leur sous-sol, ainsi qu'en ce qui concerne
-d'autres activités tendant à l'exploration et à l'exploitation de la zone à des fins économiques ;
+d'autres activités tendant à l'exploration et à l'exploitation de la zone à des fins économiques ; 
 
-2° Pour la mise en place et l'utilisation d'îles artificielles, d'installations et d'ouvrages ;
+2° Pour la mise en place et l'utilisation d'îles artificielles, d'installations et d'ouvrages ; 
 
-3° Pour la recherche scientifique marine ;
+3° Pour la recherche scientifique marine ; 
 
 4° Pour la protection et la préservation du milieu marin.
 
@@ -20,11 +20,12 @@ d'autres activités tendant à l'exploration et à l'exploitation de la zone à 
 	**Cite**:
 
 	  - Loi n°76-655 du 16 juillet 1976 - art. 1
-
-	**Anciens textes**:
-
-	  - Loi n°83-581 du 5 juillet 1983 - art. 7-2 (Ab), alinéa 3
+	  - Code des transports - art. L5242-10 (V)
 
 	**Codifié par**:
 
 	  - Ordonnance n°2010-1307 du 28 octobre 2010 - art. (V)
+
+	**Modifié par**:
+
+	  - Ordonnance n°2011-635 du 9 juin 2011 - art. 5
