--- a/01. PARTIE LEGISLATIVE/Article L5242-3 - 23080983.md
+++ b/01. PARTIE LEGISLATIVE/Article L5242-3 - 23080983.md
@@ -1,13 +1,19 @@
 # Article L5242-3
 
-I. ― Est puni de trois mois d'emprisonnement et de 3 750 € d'amende le fait, pour le capitaine ou le chef de quart d'un
-navire battant pavillon français ou étranger, d'enfreindre, y compris par imprudence ou négligence, les règles fixées par la
+I. ― Est puni de six mois d'emprisonnement et de 7 500 € d'amende le fait, pour le capitaine ou le chef de quart d'un navire
+battant pavillon français ou étranger, d'enfreindre, y compris par imprudence ou négligence, les règles fixées par la
 convention sur le règlement international de 1972 pour prévenir les abordages en mer, faite à Londres le 20 octobre 1972, et
 relatives : 
 
 1° Aux feux à allumer la nuit et aux signaux à faire en temps de brume ; 
 
-2° A la route à suivre et aux manœuvres à exécuter en cas de rencontre d'un navire ou autre bâtiment. 
+2° A la route à suivre et aux manœuvres à exécuter en cas de rencontre d'un navire ou autre bâtiment ;
+
+3° A la veille visuelle et auditive à assurer en permanence avec tous les moyens disponibles et adaptés aux circonstances et
+aux conditions existantes, de manière à permettre une pleine appréciation du risque d'abordage ;
+
+4° Au maintien en permanence d'une vitesse de sécurité permettant de prendre des mesures appropriées et efficaces pour éviter
+un abordage et de s'arrêter sur une distance adaptée aux circonstances et aux conditions existantes. 
 
 La peine est portée au double si l'infraction est commise par une personne exerçant le commandement dans des conditions
 irrégulières au sens de l'article L. 5523-2. 
@@ -20,10 +26,9 @@ intérieures maritimes ou les eaux territoriales.
 
 **Liens relatifs à cet article**
 
-	**Anciens textes**:
+	**Modifié par**:
 
-	  - Code disciplinaire et pénal de la marine marcha... - art. 80 (Ab)
-	  - Code disciplinaire et pénal de la marine marcha... - art. 87 (Ab), alinéas 1 et 3
+	  - Ordonnance n°2011-635 du 9 juin 2011 - art. 5
 
 	**Cité par**:
 
@@ -31,7 +36,7 @@ intérieures maritimes ou les eaux territoriales.
 
 	**Cite**:
 
-	  - Code des transports - art. L5523-2 (V)
+	  - Code des transports - art. L5523-2
 
 	**Codifié par**:
 
