--- a/01. PARTIE LEGISLATIVE/Article L5242-4 - 23080981.md
+++ b/01. PARTIE LEGISLATIVE/Article L5242-4 - 23080981.md
@@ -1,6 +1,6 @@
 # Article L5242-4
 
-I. ― Est puni de trois mois d'emprisonnement et de 3 750 € d'amende le fait, pour le capitaine, le chef de quart ou le pilote
+I. ― Est puni de six mois d'emprisonnement et de 15 000 € d'amende le fait, pour le capitaine, le chef de quart ou le pilote
 d'un navire, de commettre l'une des infractions définies par l'article L. 5242-3 ou tout autre fait de négligence
 occasionnant, pour le navire ou un autre navire : 
 
@@ -8,33 +8,39 @@ occasionnant, pour le navire ou un autre navire :
 
 2° Soit un échouement ou un choc contre un obstacle visible ou connu ; 
 
-3° Soit une avarie grave du navire ou de sa cargaison. 
+3° Soit une avarie grave du navire ou de sa cargaison ; 
 
-II. ― Les peines prévues par le I sont portées à deux ans d'emprisonnement et 3 750 € d'amende si l'infraction a entraîné : 
+4° Soit des blessures n'ayant pas entraîné d'incapacité totale de travail ou d'une durée inférieure ou égale à trois mois
+pour une ou plusieurs personnes. 
+
+II. ― Les peines prévues par le I sont portées à deux ans d'emprisonnement et 30 000 € d'amende si l'infraction a entraîné : 
 
 1° Soit la perte ou l'innavigabilité absolue d'un navire ; 
 
 2° Soit la perte d'une cargaison ; 
 
-3° Soit des blessures graves ou la mort pour une ou plusieurs personnes. 
+3° Soit des blessures ayant entraîné une incapacité totale de travail d'une durée supérieure à trois mois pour une ou
+plusieurs personnes. 
 
-III. ― Les peines prévues par le I et le II sont portées au double si l'infraction est commise par une personne exerçant le
+III.-Les peines prévues aux I et II sont portées à trois ans d'emprisonnement et 75 000 € d'amende si l'infraction a entraîné
+la mort pour une ou plusieurs personnes. 
+
+IV.-Les peines prévues aux I, II et III sont portées au double si l'infraction est commise par une personne exerçant le
 commandement dans des conditions irrégulières au sens de l'article L. 5523-2. 
 
-IV.-Lorsque le navire est étranger, les dispositions du présent article sont applicables lorsque l'infraction est commise
-dans les eaux intérieures maritimes ou les eaux territoriales.
+V.-Lorsque le navire est étranger, les dispositions du présent article sont applicables lorsque l'infraction est commise dans
+les eaux intérieures maritimes ou les eaux territoriales.
 
 **Liens relatifs à cet article**
 
-	**Anciens textes**:
+	**Modifié par**:
 
-	  - Code disciplinaire et pénal de la marine marcha... - art. 81 (Ab)
-	  - Code disciplinaire et pénal de la marine marcha... - art. 87 (Ab), alinéas 1 et 3
+	  - Ordonnance n°2011-635 du 9 juin 2011 - art. 5
 
 	**Cite**:
 
-	  - Code des transports - art. L5242-3 (V)
-	  - Code des transports - art. L5523-2 (V)
+	  - Code des transports - art. L5242-3
+	  - Code des transports - art. L5523-2
 
 	**Cité par**:
 
