--- a/01. PARTIE LEGISLATIVE/Article L5243-4 - 23080912.md
+++ b/01. PARTIE LEGISLATIVE/Article L5243-4 - 23080912.md
@@ -7,13 +7,9 @@ Ils peuvent visiter le navire et demander la communication des titres, certifica
 recueillir les renseignements et justifications utiles à leur mission.
 
 Toutefois, ils ne peuvent accéder aux parties du navire qui sont à usage exclusif d'habitation sauf en cas de contrôle
-portant sur les conditions d'habitabilité et de sécurité.
+portant sur les conditions de sécurité, d'habitabilité, d'hygiène, de santé et de sécurité au travail.
 
 **Liens relatifs à cet article**
-
-	**Anciens textes**:
-
-	  - Loi n°83-581 du 5 juillet 1983 - art. 5 (Ab), alinéa 1
 
 	**Cité par**:
 
@@ -22,3 +18,7 @@ portant sur les conditions d'habitabilité et de sécurité.
 	**Codifié par**:
 
 	  - Ordonnance n°2010-1307 du 28 octobre 2010 - art. (V)
+
+	**Modifié par**:
+
+	  - Ordonnance n°2011-635 du 9 juin 2011 - art. 6
