--- a/01. PARTIE LEGISLATIVE/Article L5243-5 - 23080910.md
+++ b/01. PARTIE LEGISLATIVE/Article L5243-5 - 23080910.md
@@ -1,31 +1,35 @@
 # Article L5243-5
 
 Sous réserve de contrôles inopinés, le procureur de la République est préalablement informé des opérations envisagées en vue
-de la recherche des infractions par les fonctionnaires et agents de l'Etat mentionnés aux articles L. 5243-1 à L. 5243-4. Il
-peut s'opposer à ces opérations. 
+de la recherche des infractions par les fonctionnaires et agents de l'Etat mentionnés aux articles L. 5243-1, L. 5243-2, L.
+5243-2-1, L. 5243-2-2, L. 5243-2-4, L. 5243-3 et L. 5243-4. Il peut s'opposer à ces opérations. 
 
 En cas d'infraction aux dispositions des articles L. 5241-11 à L. 5241-15 et L. 5242-9 à L. 5242-12, il est immédiatement
 informé des constatations auxquelles elles ont donné lieu. 
 
-Les procès-verbaux lui sont transmis dans les cinq jours par l'agent verbalisateur qui en adresse, dans les mêmes délais,
-copie à l'intéressé et au directeur départemental des territoires et de la mer  dont relève le lieu de l'infraction. 
+Les procès-verbaux lui sont transmis dans les meilleurs délais par l'agent verbalisateur qui en adresse, dans les mêmes
+délais, copie à l'intéressé et au directeur interrégional de la mer dont relève le lieu de l'infraction. 
 
 Ces procès-verbaux font foi jusqu'à preuve du contraire.
 
 **Liens relatifs à cet article**
 
+	**Modifié par**:
+
+	  - Ordonnance n°2011-635 du 9 juin 2011 - art. 6
+
+	**Cite**:
+
+	  - Code des transports - art. L5241-11
+	  - Code des transports - art. L5242-9
+	  - Code des transports - art. L5243-1
+	  - Code des transports - art. L5243-2-4
+	  - Code des transports - art. L5243-3
+
 	**Cité par**:
 
 	  - Code des transports - art. L5241-14 (V)
 
-	**Cite**:
-
-	  - Code des transports - art. L5243-1
-
 	**Codifié par**:
 
 	  - Ordonnance n°2010-1307 du 28 octobre 2010 - art. (V)
-
-	**Modifié par**:
-
-	  - Ordonnance n°2011-204 du 24 février 2011 - art. 5
