--- a/01. PARTIE LEGISLATIVE/Article L5331-3 - 23080626.md
+++ b/01. PARTIE LEGISLATIVE/Article L5331-3 - 23080626.md
@@ -2,18 +2,17 @@
 
 L'Etat détermine les conditions d'accueil des navires en difficulté.
 
-Le ministre chargé des ports maritimes ou son représentant peut, pour assurer la sécurité des personnes ou des biens ou
-prévenir des atteintes à l'environnement, enjoindre à l'autorité portuaire d'accueillir un navire en difficulté. Il peut
-également, pour les mêmes motifs, autoriser ou ordonner son mouvement dans le port.
+L'autorité administrative enjoint s'il y a lieu à l'autorité portuaire d'accueillir un navire ayant besoin d'assistance. Elle
+peut également, s'il y a lieu, autoriser ou ordonner son mouvement dans le port. 
 
 La réparation des dommages causés par un navire en difficulté accueilli dans un port peut être demandée au propriétaire, à
 l'armateur, ou à l'exploitant.
 
 **Liens relatifs à cet article**
 
-	**Anciens textes**:
+	**Modifié par**:
 
-	  - Code des ports maritimes - art. L302-2 (Ab)
+	  - Ordonnance n°2011-635 du 9 juin 2011 - art. 7
 
 	**Cité par**:
 
