--- a/01. PARTIE LEGISLATIVE/Article L6325-1 - 23078138.md
+++ b/01. PARTIE LEGISLATIVE/Article L6325-1 - 23078138.md
@@ -11,9 +11,16 @@ Il peut faire l'objet, pour des motifs d'intérêt général, de modulations lim
 atteintes à l'environnement, améliorer l'utilisation des infrastructures, favoriser la création de nouvelles liaisons ou
 répondre à des impératifs de continuité et d'aménagement du territoire.
 
-Le produit global de ces redevances ne peut excéder le coût des services rendus sur l'aéroport.
+Le produit global de ces redevances ne peut excéder le coût des services rendus sur l'aérodrome ou sur le système
+d'aérodromes desservant la même ville ou agglomération urbaine concerné, système défini au sens du présent chapitre comme un
+groupe d'aérodromes desservant la même ville ou agglomération urbaine, géré par un même exploitant et désigné comme tel par
+l'autorité compétente de l'Etat.
 
 **Liens relatifs à cet article**
+
+	**Modifié par**:
+
+	  - Ordonnance n°2011-1300 du 14 octobre 2011 - art. 1
 
 	**Cité par**:
 
@@ -33,10 +40,6 @@ Le produit global de ces redevances ne peut excéder le coût des services rendu
 	**Cite**:
 
 	  - Code de commerce - art. L410-2
-
-	**Anciens textes**:
-
-	  - Code de l'aviation civile - art. L224-2 (Ab), alinéas 1, 2, 3 et 4 du paragraphe I, redevances aéroportuaires
 
 	**Codifié par**:
 
