--- a/01. PARTIE LEGISLATIVE/Article L3421-8 - 23083628.md
+++ b/01. PARTIE LEGISLATIVE/Article L3421-8 - 23083628.md
@@ -2,9 +2,9 @@
 
 Sans préjudice de l'article L. 3421-2, un transporteur non résident ne peut se prévaloir des dispositions du règlement (CE)
 n° 1072/2009 du Parlement européen et du Conseil du 21 octobre 2009 établissant des règles communes pour l'accès au marché du
-transport international de marchandises par route, ni celles du règlement (CE) n° 12/98 du Conseil du 11 décembre 1997 fixant
-les conditions de l'admission des transporteurs non résidents aux transports nationaux de voyageurs par route dans un Etat
-membre, lorsqu'il exerce sur le territoire national : 
+transport international de marchandises par route, ni celles du règlement (CE) n° 1073/2009 du Parlement européen et du
+Conseil du 21 octobre 2009 fixant les conditions de l'admission des transporteurs non résidents aux transports nationaux de
+voyageurs par route dans un Etat membre, lorsqu'il exerce sur le territoire national : 
 
 1° Une activité de transport intérieur de façon habituelle, continuelle ou régulière ; 
 
@@ -15,16 +15,15 @@ Dans ces situations, le transporteur est assujetti aux dispositions des articles
 
 **Liens relatifs à cet article**
 
-	**Anciens textes**:
+	**Modifié par**:
 
-	  - Loi n°82-1153 du 30 décembre 1982 - art. 6-2 (M)
+	  - Ordonnance n°2010-1307 du 28 octobre 2010 - art. 15
 
 	**Cite**:
 
 	  - Code des transports - art. L3113-1 (V)
 	  - Code des transports - art. L3211-1 (V)
-	  - règlement (CE) n°1072/2009
-	  - règlement (CE) n°12/98
+	  - Code des transports - art. L3421-2 (V)
 
 	**Cité par**:
 
