--- a/01. PARTIE LEGISLATIVE/Article L3411-1 - 23083662.md
+++ b/01. PARTIE LEGISLATIVE/Article L3411-1 - 23083662.md
@@ -4,11 +4,10 @@ Les activités de transport routier public de personnes ou de marchandises et de
 conducteur destinés au transport de marchandises s'effectuent sous le couvert d'une licence communautaire ou d'une licence de
 transport intérieur. 
 
-La licence communautaire est délivrée dans les conditions prévues par le règlement (CEE) n° 684/92 du Conseil du 16 mars 1992
-établissant des règles communes pour les transports internationaux de voyageurs effectués par autocars et autobus ou le
-règlement (CEE) n° 881/92 du Conseil du 26 mars 1992 concernant l'accès au marché des transports de marchandises par route
-dans la Communauté exécutés au départ ou à destination du territoire d'un Etat membre, ou traversant le territoire d'un ou de
-plusieurs Etats membres. 
+La licence communautaire est délivrée dans les conditions prévues par le règlement (CE) n° 1073/2009 du Parlement européen et
+du Conseil du 21 octobre 2009 établissant des règles communes pour l'accès au marché international des services de transport
+par autocars et autobus ou le règlement (CE) n° 1072/2009 du Parlement européen et du Conseil du 21 octobre 2009 établissant
+des règles communes pour l'accès au marché du transport international de marchandises par route. 
 
 La licence de transport intérieur est délivrée aux entreprises inscrites au registre mentionné aux articles L. 3113-1 et L.
 3211-1 et qui n'ont pas l'obligation de détenir une licence communautaire. Elle est exigée de toute entreprise de transport
@@ -23,6 +22,10 @@ spécificités de chaque type de transport.
 
 **Liens relatifs à cet article**
 
+	**Modifié par**:
+
+	  - Ordonnance n°2010-1307 du 28 octobre 2010 - art. 15
+
 	**Cite**:
 
 	  - Code des transports - art. L3113-1 (V)
@@ -34,10 +37,6 @@ spécificités de chaque type de transport.
 	  - Code des transports - art. L3452-6 (V)
 	  - Code des transports - art. L3521-4 (M)
 	  - Code des transports - art. L3551-4 (V)
-
-	**Anciens textes**:
-
-	  - Loi n°82-1153 du 30 décembre 1982 - art. 36 (Ab)
 
 	**Codifié par**:
 
