--- a/01. PARTIE LEGISLATIVE/Article L3452-6 - 23083561.md
+++ b/01. PARTIE LEGISLATIVE/Article L3452-6 - 23083561.md
@@ -4,9 +4,11 @@ Est puni d'un an d'emprisonnement et de 15 000 € d'amende :
 
 1° Le fait d'exercer une activité de transporteur public routier, de déménageur, de loueur de véhicules industriels avec
 conducteur, alors que l'entreprise n'y a pas été autorisée en application des articles L. 3113-1, L. 3211-1 et L. 3411-1, du
-règlement (CEE) n° 881/92 du Conseil du 26 mars 1992, d'un accord bilatéral conclu avec un Etat tiers ou, à défaut d'un tel
-accord, d'une décision expresse de l'autorité administrative. Le tribunal peut, en outre, prononcer la peine complémentaire
-d'interdiction d'effectuer des opérations de transport sur le territoire national pendant une durée d'un an au plus ; 
+règlement (CE) n° 1072/2009 du Parlement européen et du Conseil du 21 octobre 2009 établissant des règles communes pour
+l'accès au marché du transport international de marchandises par route, d'un accord bilatéral conclu avec un Etat tiers ou, à
+défaut d'un tel accord, d'une décision expresse de l'autorité administrative. Le tribunal peut, en outre, prononcer la peine
+complémentaire d'interdiction d'effectuer des opérations de transport sur le territoire national pendant une durée d'un an au
+plus ; 
 
 2° Le fait d'utiliser une autorisation, une licence ou une copie conforme délivrée pour l'exercice d'une activité réglementée
 de transport, de location de véhicules industriels avec conducteur, alors que ce titre est périmé, a été suspendu ou est
@@ -26,16 +28,12 @@ b) L'affichage ou la diffusion de la décision dans les conditions prévues par 
 5° Le fait, pour une entreprise de transport routier de marchandises non résidente ou, dans le cas de services occasionnels,
 pour une entreprise de transport de personnes non résidente, d'effectuer, sans y être admise, un transport intérieur dit de
 cabotage au sens des règlements (CE) n° 1072/2009 du Parlement européen et du Conseil du 21 octobre 2009 établissant des
-règles communes pour l'accès au marché du transport international de marchandises par route et (CE) n° 12/98 du Conseil du 11
-décembre 1997 fixant les conditions de l'admission des transporteurs non résidents aux transports nationaux de voyageurs par
-route dans un Etat membre. Le tribunal peut, en outre, prononcer la peine complémentaire d'interdiction d'effectuer des
-opérations de transport sur le territoire national pendant une durée d'un an au plus.
+règles communes pour l'accès au marché du transport international de marchandises par route et (CE) n° 1073/2009 du Parlement
+européen et du Conseil du 21 octobre 2009 établissant des règles communes pour l'accès au marché international des services
+de transport par autocars et autobus. Le tribunal peut, en outre, prononcer la peine complémentaire d'interdiction
+d'effectuer des opérations de transport sur le territoire national pendant une durée d'un an au plus.
 
 **Liens relatifs à cet article**
-
-	**Anciens textes**:
-
-	  - Loi n°52-401 du 14 avril 1952 - art. 25 (Ab), alinéas 8 à 10 et 12 à 17, paragraphe II
 
 	**Cité par**:
 
@@ -46,14 +44,17 @@ opérations de transport sur le territoire national pendant une durée d'un an a
 	  - Code des transports - art. R3113-26 (VD)
 	  - Code des transports - art. R3211-27 (VD)
 
+	**Modifié par**:
+
+	  - Ordonnance n°2010-1307 du 28 octobre 2010 - art. 15
+
 	**Cite**:
 
-	  - Code pénal - art. 131-35
+	  - Code pénal - art. 131-35 (V)
 	  - Code des transports - art. L3113-1 (V)
 	  - Code des transports - art. L3211-1 (V)
-	  - Code des transports - art. L3411-1 (VT)
+	  - Code des transports - art. L3411-1 (V)
 	  - Code des transports - art. L3452-1 (V)
-	  - règlements (CE) n°1072/2009
 
 	**Codifié par**:
 
