--- a/01. PARTIE LEGISLATIVE/Article L1721-2 - 23085033.md
+++ b/01. PARTIE LEGISLATIVE/Article L1721-2 - 23085033.md
@@ -1,16 +1,19 @@
 # Article L1721-2
 
-Les amendes pénales correspondant aux contraventions des quatre premières classes pour lesquelles l'action publique est
-éteinte par le paiement d'une amende forfaitaire, en application de l'article 529 du code de procédure pénale, ne peuvent
-faire l'objet d'une transaction. 
+Les amendes pénales correspondant aux contraventions pour lesquelles l'action publique est éteinte par le paiement d'une
+amende forfaitaire, en application de l'article 529 du code de procédure pénale, ne peuvent faire l'objet d'une transaction. 
 
 La transaction ne peut porter sur les peines privatives de liberté.
 
 **Liens relatifs à cet article**
 
+	**Modifié par**:
+
+	  - Loi n°2011-1862 du 13 décembre 2011 - art. 29
+
 	**Cite**:
 
-	  - Code de procédure pénale - art. 529 (V)
+	  - Code de procédure pénale - art. 529
 
 	**Codifié par**:
 
