--- a/01. PARTIE LEGISLATIVE/Article L6132-3 - 23078376.md
+++ b/01. PARTIE LEGISLATIVE/Article L6132-3 - 23078376.md
@@ -1,22 +1,22 @@
 # Article L6132-3
 
-En cas de disparition sans nouvelles d'un aéronef, l'appareil est réputé perdu trois mois après la date de l'envoi des
-dernières nouvelles.
+En cas de disparition sans nouvelles d'un aéronef, l'appareil est réputé perdu un mois après la date de l'envoi des dernières
+nouvelles. 
 
-A l'expiration de ce délai, les dispositions des articles 87 à 90 du code civil peuvent être mises en œuvre.
+A l'expiration de ce délai, les dispositions des articles 88 à 90 du code civil peuvent être mises en œuvre. 
 
 A cette fin, l'autorité administrative déclare la présomption de disparition et adresse au procureur général près la cour
 d'appel compétente les réquisitions nécessaires pour la constatation judiciaire du décès des personnes disparues.
 
 **Liens relatifs à cet article**
 
+	**Modifié par**:
+
+	  - Loi n°2011-1862 du 13 décembre 2011 - art. 68
+
 	**Cite**:
 
-	  - Code civil - art. 87 (V)
-
-	**Anciens textes**:
-
-	  - Code de l'aviation civile - art. L142-3 (VT)
+	  - Code civil - art. 88
 
 	**Codifié par**:
 
