--- a/01. PARTIE LEGISLATIVE/Article L1252-10 - 23085624.md
+++ b/01. PARTIE LEGISLATIVE/Article L1252-10 - 23085624.md
@@ -1,7 +1,7 @@
 # Article L1252-10
 
-Les règles relatives au transport des substances radioactives sont fixées par les dispositions du titre IV de la loi n°
-2006-686 du 13 juin 2006 relative à la transparence et à la sécurité en matière nucléaire.
+Les règles relatives au transport des substances radioactives sont fixées par les dispositions du chapitre V du titre IX du
+livre V du code de l'environnement.
 
 **Liens relatifs à cet article**
 
@@ -12,3 +12,7 @@ Les règles relatives au transport des substances radioactives sont fixées par 
 	**Codifié par**:
 
 	  - Ordonnance n°2010-1307 du 28 octobre 2010 - art. (V)
+
+	**Modifié par**:
+
+	  - Ordonnance n°2012-6 du 5 janvier 2012 - art. 5, v. init.
