--- a/01. PARTIE LEGISLATIVE/Article L1422-4 - 23085455.md
+++ b/01. PARTIE LEGISLATIVE/Article L1422-4 - 23085455.md
@@ -1,17 +1,19 @@
 # Article L1422-4
 
 La capacité professionnelle mentionnée à l'article L. 1422-2 peut être reconnue par un organisme présentant des garanties
-d'impartialité et de compétence, habilité à cet effet dans des conditions fixées par décret en Conseil d'Etat.
+d'impartialité et de compétence, habilité à cet effet dans des conditions fixées par décret en Conseil d'Etat. Les frais de
+gestion des procédures de reconnaissance de la capacité professionnelle et de délivrance des documents relatifs à cette
+reconnaissance sont à la charge des candidats, selon les modalités fixées par ce décret.
 
 **Liens relatifs à cet article**
 
-	**Anciens textes**:
+	**Modifié par**:
 
-	  - Loi n°82-1153 du 30 décembre 1982 - art. 8 (Ab), alinéa 4, paragraphe I
+	  - Loi n°2012-260 du 22 février 2012 - art. 9
 
 	**Cite**:
 
-	  - Code des transports - art. L1422-2 (VD)
+	  - Code des transports - art. L1422-2
 
 	**Codifié par**:
 
