--- a/01. PARTIE LEGISLATIVE/Article L5713-1 - 23078874.md
+++ b/01. PARTIE LEGISLATIVE/Article L5713-1 - 23078874.md
@@ -1,13 +1,13 @@
 # Article L5713-1
 
-Dans les départements d'outre-mer, les ports relevant de l'Etat auxquels s'applique le livre III de la présente partie
-figurent sur une liste fixée par décret en Conseil d'Etat.
+En Guadeloupe, en Guyane, en Martinique et à La Réunion, les ports relevant de l'Etat auxquels s'applique le livre III de la
+présente partie figurent sur une liste fixée par décret en Conseil d'Etat.
 
 **Liens relatifs à cet article**
 
-	**Anciens textes**:
+	**Modifié par**:
 
-	  - Code des ports maritimes - art. L100-1 (Ab) (4°)
+	  - Loi n°2012-260 du 22 février 2012 - art. 1
 
 	**Cité par**:
 
