--- a/01. PARTIE LEGISLATIVE/Article L5713-3 - 23078870.md
+++ b/01. PARTIE LEGISLATIVE/Article L5713-3 - 23078870.md
@@ -1,13 +1,13 @@
 # Article L5713-3
 
 Les conditions d'application du chapitre III et de la section première du chapitre IV du titre IV du livre III de la présente
-partie aux départements d'outre-mer sont fixées par voie réglementaire.
+partie en Guadeloupe, en Guyane, en Martinique et à La Réunion sont fixées par voie réglementaire.
 
 **Liens relatifs à cet article**
 
-	**Anciens textes**:
+	**Modifié par**:
 
-	  - Code des ports maritimes - art. L541-1 (Ab)
+	  - Loi n°2012-260 du 22 février 2012 - art. 1
 
 	**Codifié par**:
 
