--- a/01. PARTIE LEGISLATIVE/Article L5713-2 - 23078872.md
+++ b/01. PARTIE LEGISLATIVE/Article L5713-2 - 23078872.md
@@ -1,9 +1,13 @@
 # Article L5713-2
 
-Les conditions et modalités d'adaptation dans les départements d'outre-mer des dispositions du chapitre III du titre Ier du
-livre III de la présente partie sont déterminées par décret en Conseil d'Etat.
+Les conditions et modalités d'adaptation en Guadeloupe, en Guyane, en Martinique et à La Réunion des dispositions du chapitre
+III du titre Ier du livre III de la présente partie sont déterminées par décret en Conseil d'Etat.
 
 **Liens relatifs à cet article**
+
+	**Modifié par**:
+
+	  - Loi n°2012-260 du 22 février 2012 - art. 1
 
 	**Codifié par**:
 
