--- a/01. PARTIE LEGISLATIVE/Article L3211-1 - 23083826.md
+++ b/01. PARTIE LEGISLATIVE/Article L3211-1 - 23083826.md
@@ -5,11 +5,14 @@ véhicules industriels avec conducteur peut être subordonné, selon des modalit
 conditions d'établissement, d'honorabilité professionnelle, de capacité financière et de capacité professionnelle ainsi qu'à
 l'inscription à un registre tenu par les autorités de l'Etat.
 
+L'administration  fiscale transmet au ministère chargé des transports les données  fiscales nécessaires pour lui permettre
+d'apprécier la capacité  financière des entreprises inscrites au registre prévu au premier  alinéa.
+
 **Liens relatifs à cet article**
 
 	**Modifié par**:
 
-	  - Loi n°2011-12 du 5 janvier 2011 - art. 10
+	  - Loi n°2012-387 du 22 mars 2012 - art. 91
 
 	**Cité par**:
 
