--- a/01. PARTIE LEGISLATIVE/Article L3431-1 - 23083618.md
+++ b/01. PARTIE LEGISLATIVE/Article L3431-1 - 23083618.md
@@ -1,16 +1,21 @@
 # Article L3431-1
 
 La gestion et la délivrance des documents relatifs au contrôle du cabotage et des autorisations de transport routier pour la
-réalisation de liaisons internationales peuvent être confiées à un ou plusieurs organismes agréés. Un décret en Conseil
-d'Etat précise les attributions et les conditions d'agrément de ces organismes ; il détermine les règles de gestion et de
-délivrance des documents et des autorisations, et les modalités selon lesquelles les entreprises participent aux frais de
-gestion et de délivrance.
+réalisation de liaisons internationales et de dessertes intérieures régulières d'intérêt national effectuées à l'occasion
+d'un service régulier de transport routier international de voyageurs prévues à l'article L. 3421-2 peuvent être confiées à
+un ou plusieurs organismes agréés. Un décret en Conseil d'Etat précise les attributions et les conditions d'agrément de ces
+organismes ; il détermine les règles de gestion et de délivrance des documents et des autorisations, et les modalités selon
+lesquelles les entreprises participent aux frais de gestion et de délivrance.
 
 **Liens relatifs à cet article**
 
-	**Anciens textes**:
+	**Modifié par**:
 
-	  - Loi n°2009-1503 du 8 décembre 2009 - art. 35 (Ab)
+	  - Loi n°2012-387 du 22 mars 2012 - art. 91
+
+	**Cite**:
+
+	  - Code des transports - art. L3421-2
 
 	**Cité par**:
 
