--- a/01. PARTIE LEGISLATIVE/Article L1631-1 - 23085095.md
+++ b/01. PARTIE LEGISLATIVE/Article L1631-1 - 23085095.md
@@ -2,19 +2,11 @@
 
 Les conditions dans lesquelles l'autorité compétente peut prescrire la mise en œuvre de systèmes de vidéoprotection par les
 gestionnaires d'infrastructures, les autorités et personnes exploitant des transports collectifs relevant de l'activité de
-transport intérieur et les exploitants d'aéroports ouverts au trafic international, sont fixées par l'article 10-1 de la loi
-n° 95-73 du 21 janvier 1995 d'orientation et de programmation relative à la sécurité.
+transport intérieur et les exploitants d'aéroports ouverts au trafic international, sont fixées par le
+  <font size="1">chapitre III du titre II du livre II du code de la sécurité intérieure</font>.
 
 **Liens relatifs à cet article**
 
-	**Cite**:
-
-	  - Loi n°95-73 du 21 janvier 1995 - art. 10-1
-
 	**Modifié par**:
 
-	  - Loi n°2011-267 du 14 mars 2011 - art. 17
-
-	**Codifié par**:
-
-	  - Ordonnance n°2010-1307 du 28 octobre 2010 - art. (V)
+	  - Ordonnance n°2012-351 du 12 mars 2012 - art. 3 (V)
