--- a/01. PARTIE LEGISLATIVE/Article L3312-1 - 23083715.md
+++ b/01. PARTIE LEGISLATIVE/Article L3312-1 - 23083715.md
@@ -11,9 +11,9 @@ employeurs et des salariés du secteur.
 
 **Liens relatifs à cet article**
 
-	**Modifié par**:
+	**Liens**:
 
-	  - Ordonnance n°2011-204 du 24 février 2011 - art. 3
+	  - DEPLACE: Ordonnance n°2012-814 du 22 juin 2012 - art. 1
 
 	**Cite**:
 
