--- a/01. PARTIE LEGISLATIVE/Article L3312-2 - 23083712.md
+++ b/01. PARTIE LEGISLATIVE/Article L3312-2 - 23083712.md
@@ -24,10 +24,6 @@ certaines dispositions de la législation sociale dans le domaine des transports
 
 	  - Ordonnance n°2010-1307 du 28 octobre 2010 - art. (V)
 
-	**Modifié par**:
+	**Liens**:
 
-	  - Ordonnance n°2011-204 du 24 février 2011 - art. 3
-
-	**Cite**:
-
-	  - règlement (CE) n°561/2006
+	  - DEPLACE: Ordonnance n°2012-814 du 22 juin 2012 - art. 1
