--- a/01. PARTIE LEGISLATIVE/Article L3312-3 - 23083709.md
+++ b/01. PARTIE LEGISLATIVE/Article L3312-3 - 23083709.md
@@ -7,9 +7,9 @@ peuvent être autorisées par l'autorité administrative compétente.
 
 **Liens relatifs à cet article**
 
-	**Anciens textes**:
+	**Liens**:
 
-	  - Code du travail - art. L212-4-4 (M), alinéa 3, dernière phrase
+	  - DEPLACE: Ordonnance n°2012-814 du 22 juin 2012 - art. 1
 
 	**Cite**:
 
