--- a/01. PARTIE LEGISLATIVE/Article L3551-2 - 23083500.md
+++ b/01. PARTIE LEGISLATIVE/Article L3551-2 - 23083500.md
@@ -1,13 +1,19 @@
 # Article L3551-2
 
-Le deuxième alinéa de l'article L. 3312-2 ne s'applique pas à Saint-Pierre-et-Miquelon.
+Le deuxième alinéa de l'article L. 3312-2 ainsi que les articles L. 3312-4 à L. 3312-9 ne s'appliquent pas à Saint-Pierre-et-
+Miquelon.
 
 **Liens relatifs à cet article**
 
 	**Cite**:
 
-	  - Code des transports - art. L3312-1 (V)
+	  - Code des transports - art. L3312-2 (V)
+	  - Code des transports - art. L3312-4
 
 	**Codifié par**:
 
 	  - Ordonnance n°2010-1307 du 28 octobre 2010 - art. (V)
+
+	**Modifié par**:
+
+	  - Ordonnance n°2012-814 du 22 juin 2012 - art. 2 (V)
