--- a/01. PARTIE LEGISLATIVE/Article L2231-4 - 23084184.md
+++ b/01. PARTIE LEGISLATIVE/Article L2231-4 - 23084184.md
@@ -1,19 +1,20 @@
 # Article L2231-4
 
-Les riverains des voies ferrées peuvent être contraints de respecter les règles de gestion forestière prévues par l'article
-L. 322-8 du code forestier.
+Les riverains des voies ferrées peuvent être contraints de respecter les règles de gestion forestière prévues par les
+articles L131-16 et L134-12 du nouveau code forestier.
 
 **Liens relatifs à cet article**
 
-	**Cite**:
+	**Modifié par**:
 
-	  - Code forestier - art. L322-8 (V)
+	  - Ordonnance n°2012-92 du 26 janvier 2012 - art. 5
 
 	**Cité par**:
 
 	  - Code des transports - art. L2311-2 (V)
 	  - Code du tourisme. - art. L342-15 (V)
 
-	**Codifié par**:
+	**Cite**:
 
-	  - Ordonnance n°2010-1307 du 28 octobre 2010 - art. (V)
+	  - Code forestier (nouveau) - art. L131-16 (V)
+	  - Code forestier (nouveau) - art. L134-12 (V)
